--- a/docs/书法/练习/书法练习轨迹--明月几时有.md
+++ b/docs/书法/练习/书法练习轨迹--明月几时有.md
@@ -522,6 +522,24 @@
 
 ---
 
+> 身体是革命的本钱，健康是1，金钱、名誉、地位、房子、车子……这些都是0。 --20220426
+
+| 时间管理 | 重要    | 一般     | 不重要   |
+| ----     | ----    | -----    | -----    |
+| 紧急     | 吃饭    | 锻炼身体 | 休闲娱乐     |
+| 一般     | 学习、孝敬父母 | 工作     | 看电影、玩游戏  |
+| 不紧急   | 思考、理财     | 结婚生子 | 旅游  |
+
+```
+吃饭不积极，思想有问题。
+学而不思则罔，思而不学则殆。
+行胜于言，知行合一。
+人是一根有思想的芦苇。
+
+```
+
+---
+
 - [x] 24、20210314
 
 ![img75]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103090001.jpg )
@@ -739,6 +757,7 @@
 ![img120]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202105/2021042604.jpg )
 
 <br/>
+
 ![img121]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202105/2021043001.jpg )
 ![img122]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202105/2021043002.jpg )
 
@@ -750,6 +769,7 @@
 ![img124]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202105/2021050102.jpg )
 
 <br/>
+
 ![img125]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202105/2021050201.jpg )
 ![img126]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202105/2021050202.jpg )
 
@@ -2263,8 +2283,8 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 - [x] 76、20220328
 
-![img317]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202203/2022032501.jpg )
-![img318]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202203/2022032601.jpg )
+![img319]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202203/2022032501.jpg )
+![img320]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202203/2022032601.jpg )
 
 ```
 这周（20220321-20220327）主要在忙xushufa.cn 新网站的事情。
@@ -2292,8 +2312,8 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 - [x] 77、20220404
 
-![img319]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040101.jpg )
-![img320]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040201.jpg )
+![img321]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040101.jpg )
+![img322]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040201.jpg )
 
 ```
 清明 
@@ -2327,13 +2347,13 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 - [x] 78、20220411
 
-![img321]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040601.jpg )
-![img322]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040701.jpg )
+![img323]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040601.jpg )
+![img324]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040701.jpg )
 
 ---
 
-![img323]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040801.jpg )
-![img324]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040901.jpg )
+![img325]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040801.jpg )
+![img326]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022040901.jpg )
 
 ```
 这周单休，看了两部电影，其中两处场景印象深刻。
@@ -2373,8 +2393,8 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 - [x] 79、20220418
 
-![img325]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022041301.jpg )
-![img326]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022041501.jpg )
+![img327]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022041301.jpg )
+![img328]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022041501.jpg )
 
 ---
 
@@ -2386,6 +2406,40 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 命里有时终须有，命里无时莫强求。
 
 一命二运三风水，四积功德五读书，六择业七择偶，八交贵人九养生。
+
+```
+
+---
+
+- [x] 80、20220425
+
+![img329]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022042001.jpg )
+![img330]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022042201.jpg )
+
+---
+
+![img331]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022042101.jpg )
+![img332]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/20220421011.jpg )
+
+---
+
+![img333]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022042301.jpg )
+![img334]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/20220423011.jpg )
+
+
+
+
+- 上海市卫健委今早（24日）通报：2022年4月23日0—24时，新增本土新冠肺炎确诊病例1401例和无症状感染者19657例，其中541例确诊病例为此前无症状感染者转归，816例确诊病例和19421例无症状感染者在隔离管控中发现，其余在相关风险人群排查中发现。  详见： [新华网]( https://www.toutiao.com/article/7089951013922144808 ) [环球网]( https://www.toutiao.com/article/7089952195746988547 )
+
+- 天行健，君子以自强不息。地势坤，君子以厚德载物。
+
+
+```
+《论语-宪问篇》
+或曰：“以德报怨，何如？”
+子曰：“何以报德？以直报怨，以德报德。”
+
+译文：有人问孔子：“用恩德来报答怨恨怎么样？”孔子回答：“用什么来报答恩德呢？应该是用正直来报答怨恨，用恩德来报答恩德。”
 
 ```
 
@@ -2534,7 +2588,7 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 | 无为徐生   | 微信公众号                                               	 |  &ensp; |  今日头条号        |
 | ---------  | ------------------------------------------------------------- |  -      |  ----------        |
-|  二维码    | ![w]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/other/wuweixusheng_weixin.png ) | <br/> | ![t]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/other/wuweixusheng_toutiao.png )     |
+|  二维码    | ![img_wx]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/other/wuweixusheng_weixin.png ) | <br/> | ![img_tt]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/other/wuweixusheng_toutiao.png )     |
 
 ***
 
