--- a/docs/书法/练习/徐书法.md
+++ b/docs/书法/练习/徐书法.md
@@ -65,6 +65,18 @@
 
 ---
 
+> 博客网站
+
+**生活随笔-编程笔记-书法练习轨迹。**
+
+|        | 地址        |  备注          |
+| -----  | ----------- |  ------------- |
+| 1      | [xushufa.cn]( https://xushufa.cn )            | 书法练习网站。 |
+| 2      | [blog.xushufa.cn]( https://blog.xushufa.cn )  | `vuepress`构建的博客网站。 |
+| 3      | [web.xushufa.cn]( https://web.xushufa.cn )    | `vuepress-theme-reco`构建的博客网站。|
+
+---
+
 > 徐书法 `xushufa.cn` 个人书法练习网站
 
 | 徐书法 | 我的网站    |  备注          |
