--- a/docs/书法/轨迹/诗词杂句.md
+++ b/docs/书法/轨迹/诗词杂句.md
@@ -5,6 +5,7 @@ tags:
  - 练习
  - 明月
  - 诗词
+ - 生活
 categories:
  -  轨迹
 ---
@@ -19,95 +20,81 @@ categories:
 
 ## 1、诗词
 
-```
-半生有感 
-龙骨山上风车横，转去庐州蜀山风。
-十年一觉世不同，西湖水清临安梦。
+半生有感 <br />
+龙骨山上风车横，转去庐州蜀山风。<br />
+十年一觉世不同，西湖水清临安梦。<br />
 
---202105
-
-```
+`--202105`
 
 ---
 
-```
-无题
-苦思冥想诗一首，
-漫漫人生三十已。
-若论何事挂心头，
-书法练习轨迹有。
+无题 <br />
+苦思冥想诗一首， <br />
+漫漫人生三十已。 <br />
+若论何事挂心头， <br />
+书法练习轨迹有。 <br />
 
---20210712
-
-```
+`--20210712`
 
 ---
 
-```
-游青山湖
-青山湖道，郁郁葱葱。
-背山面水，景色宜人。
-古木参天，中有绿道。
-草原辽阔，水面清圆。
-免费景点，游人如织。
-交通拥堵，绿色出行。
-保护环境，人人有责。
+游青山湖 <br />
+青山湖道，郁郁葱葱。 <br />
+背山面水，景色宜人。 <br />
+古木参天，中有绿道。 <br />
+草原辽阔，水面清圆。 <br />
+免费景点，游人如织。 <br />
+交通拥堵，绿色出行。 <br />
+保护环境，人人有责。 <br />
 
---202111
-
-```
+`--202111`
 
 ---
 
-```
-一时易，长久难。
-放弃易，努力难。
-玩乐易，学习难。
-躺平易，奋斗难。
-生存易，生活难。
-平凡易，伟大难。
+易难说 <br />
+一时易，长久难。 <br />
+放弃易，努力难。 <br />
+玩乐易，学习难。 <br />
+躺平易，奋斗难。 <br />
+生存易，生活难。 <br />
+平凡易，伟大难。 <br />
 
---20211102
-
-```
+`--20211102`
 
 ---
 
-```
-元旦三天，内外兼修。
-其第一日，三五好友。
-拜上天竺，观法喜寺。
-游人如织，车水马龙。
-其第二日，九州街上。
-临安文体，锦南宝龙。
-繁华似锦，自然和谐。
-其第三日，修养身息。
-阳光正好，晒被刷鞋。
-听歌悦耳，练字修心。
-书法练习，轨迹在我。
-水滴石穿，铁磨针成。
-人生在世，有为无为。
-打油之诗，摸鱼之工。
-记我所记，感我所感。
-运到功成，顺其自然。
-自知者明，知足常乐。
---20220103
+元旦三天打油诗 <br />
+元旦三天，内外兼修。 <br />
+其第一日，三五好友。 <br />
+拜上天竺，观法喜寺。 <br />
+游人如织，车水马龙。 <br />
+其第二日，九州街上。 <br />
+临安文体，锦南宝龙。 <br />
+繁华似锦，自然和谐。 <br />
+其第三日，修养身息。 <br />
+阳光正好，晒被刷鞋。 <br />
+听歌悦耳，练字修心。 <br />
+书法练习，轨迹在我。 <br />
+水滴石穿，铁磨针成。 <br />
+人生在世，有为无为。 <br />
+打油之诗，摸鱼之工。 <br />
+记我所记，感我所感。 <br />
+运到功成，顺其自然。 <br />
+自知者明，知足常乐。 <br />
 
-```
+`--20220103`
 
 ---
 
-```
-徐书-藏头诗,庚子年腊月初十寒夜抒怀所作。
+徐书-藏头诗,庚子年腊月初十寒夜抒怀所作。 <br />
+徐徐微风拂山岗， <br />
+永世难忘撞南墙。 <br />
+钦敬夸父逐日光， <br />
+书就精卫填海浪。 <br />
 
-徐徐微风拂山岗，
-永世难忘撞南墙。
-钦敬夸父逐日光，
-书就精卫填海浪。
+`--20220112`
 
---20220112
-
-```
+---
 
 ## 2、杂句
 
