--- a/docs/书法/轨迹/有感之杂说.md
+++ b/docs/书法/轨迹/有感之杂说.md
@@ -161,23 +161,22 @@ categories:
 
 > 心不静，字不正。貌似进入了疲惫期，现在练字也不能让我心静了。 --20210927  <br/>
 
-- 如何克服疲惫期呢？
-- 疲惫期又称疲倦期、疲劳期，指长时间专注于某一项活动之后，对该项活动感觉枯燥乏味、热情消退的时期。
+- 如何克服疲惫期呢？ <br/>
+疲惫期又称疲倦期、疲劳期，指长时间专注于某一项活动之后，对该项活动感觉枯燥乏味、热情消退的时期。 <br/>
+首先分析为何会进入疲惫期，长时间、重复性、机械性的单一活动肯定会无聊、枯燥、乏味。这是由人的生理构造决定的。 <br/>
 
-- 首先分析为何会进入疲惫期，长时间、重复性、机械性的单一活动肯定会无聊、枯燥、乏味。这是由人的生理构造决定的。
-
-- 克服疲惫期的方法如下：
-- 1、休息一段时间，这段时间不要练字，调整一下思绪。所谓休息是为了更好的赶路。
-- 2、练习其他字体或者换其他字帖。  <br/>
-    以前练楷书的现在可以练行书、草书、隶书。  <br/>
-	以前练颜体的现在可以练柳体、欧体。楷书四大家换着学。  <br/>
-	楷书四大家：颜柳欧赵。颜真卿、柳公权、欧阳询、赵孟頫。 <br/>
-	也可以练练以前未临摹过的字。  <br/>
-	总之要保持一种新鲜感。  <br/>
-- 3、有条件的话，可以学习国画。所谓书画不分家。诗中有画，画中有诗。
-- 4、读一些关于书法的书籍。腹有诗书气自华。
-- 5、去博物馆、艺术馆看一些书法名家的字帖，近距离感受艺术的气息。
-- 6、参加书法活动。向书法大家请教。
+- 克服疲惫期的方法如下： <br/>
+1、休息一段时间，这段时间不要练字，调整一下思绪。所谓休息是为了更好的赶路。 <br/>
+2、练习其他字体或者换其他字帖。  <br/>
+以前练楷书的现在可以练行书、草书、隶书。  <br/>
+以前练颜体的现在可以练柳体、欧体。楷书四大家换着学。  <br/>
+楷书四大家：颜柳欧赵。颜真卿、柳公权、欧阳询、赵孟頫。 <br/>
+也可以练练以前未临摹过的字。  <br/>
+总之要保持一种新鲜感。  <br/>
+- 3、有条件的话，可以学习国画。所谓书画不分家。诗中有画，画中有诗。 <br/>
+4、读一些关于书法的书籍。腹有诗书气自华。 <br/>
+5、去博物馆、艺术馆看一些书法名家的字帖，近距离感受艺术的气息。 <br/>
+6、参加书法活动。向书法大家请教。
 
 
 
@@ -300,40 +299,31 @@ categories:
 
 #### 2.2.4、我的三观：**制**恒强变真
 
-> 我的三观：**制**恒强变真
+> 我的三观：制恒强变真
 
 
-- 我的三观：人生观、世界观、价值观，亦即人生信条、五字真言：制 恒 强 变 真。
-- 制：制怒、自制、克制，不冲动、不贪婪，任何时候都要保持冷静，泰山崩于前而色不变。心平气和才能修身养性。
-- 恒：持之以恒，学习任何知识、技能都要长久的奋斗，坚持就是胜利。
-- 强：坚强、自强、自信、自立。
-- 变：变化，见机行事，随机应变。世上唯一的不变就是变化。
-- 真：真诚、真实。待人以诚、待己以真。认识自己，了解自己的优点缺点，知道自己要干什么。世上乱花迷人眼，需要仔细甄别，方能去伪存真。
-
-  <br/>
-  
-- 前三条（制、恒、强）是对内，对自己，后两条（变 真）是对外，对别人。只有内外兼修，审慎笃行，两手都要抓，两手都要硬，才能辨别真伪，提高自身。
-- 若感觉观点太多，信条很杂，只需要记住一个字：制。即可。
-
-  <br/>
+- 我的三观：人生观、世界观、价值观，亦即人生信条、五字真言：制 恒 强 变 真。 <br/>
+**制**：制怒、自制、克制，不冲动、不贪婪，任何时候都要保持冷静，泰山崩于前而色不变。心平气和才能修身养性。 <br/>
+**恒**：持之以恒，学习任何知识、技能都要长久的奋斗，坚持就是胜利。<br/>
+**强**：坚强、自强、自信、自立。 <br/>
+**变**：变化，见机行事，随机应变。世上唯一的不变就是变化。 <br/>
+**真**：真诚、真实。待人以诚、待己以真。认识自己，了解自己的优点缺点，知道自己要干什么。世上乱花迷人眼，需要仔细甄别，方能去伪存真。 <br/>
  
-- 在高中的某一天，突然醒悟了以上五字真言，这些年为人处世基本照此原则，不破藩篱。
-- 第一条-制怒，实践的比较好，一直都比较冷静平和。
-- 后三条-强、变、真，也算是身体力行。
-- 第二条-恒 。。。 世间之事，知易行难。行百里者，半途而废者九十。小丑竟是我自己。(⊙︿⊙)
+- 前三条（制、恒、强）是对内，对自己，后两条（变 真）是对外，对别人。只有内外兼修，审慎笃行，两手都要抓，两手都要硬，才能辨别真伪，提高自身。 <br/>
+若感觉观点太多，信条很杂，只需要记住一个字：制。即可。 <br/>
 
-  <br/>
- 
-- 说一些名言警句（鸡汤）鼓励一下自己：
-- 东隅已逝，桑榆非晚。
-- 少壮不努力，老大徒伤悲。
-- 天下大事，必作于细。天下难事，必作于易。
-- 种一棵树最好的时间是十年前，其次是现在。
-- 古今成大事者，不唯有超世之才，亦必有坚韧不拔之志。
-- 宠辱不惊，看庭前花开花落;去留无意，望天上云卷云舒。
+- 在高中的某一天，突然醒悟了以上五字真言，这些年为人处世基本照此原则，不破藩篱。 <br/>
+第一条-制怒，实践的比较好，一直都比较冷静平和。 <br/>
+后三条-强、变、真，也算是身体力行。 <br/>
+第二条-恒 。。。 世间之事，知易行难。行百里者，半途而废者九十。小丑竟是我自己。(⊙︿⊙) <br/>
 
-`--202106`
-
+- 说一些名言警句（鸡汤）鼓励一下自己： <br/>
+东隅已逝，桑榆非晚。 <br/>
+少壮不努力，老大徒伤悲。 <br/>
+天下大事，必作于细。天下难事，必作于易。 <br/>
+种一棵树最好的时间是十年前，其次是现在。 <br/>
+古今成大事者，不唯有超世之才，亦必有坚韧不拔之志。 <br/>
+宠辱不惊，看庭前花开花落;去留无意，望天上云卷云舒。 `--202106` <br/> 
 
 ---
 
