--- a/docs/书法/练习/古文诗词.md
+++ b/docs/书法/练习/古文诗词.md
@@ -175,117 +175,127 @@
 
 
 > 1、满江红 - 岳飞
-- 怒发冲冠，凭阑处、潇潇雨歇。 
-- 抬望眼，仰天长啸，壮怀激烈。 
-- 三十功名尘与土，八千里路云和月。 
-- 莫等闲、白了少年头，空悲切。
-- 靖康耻，犹未雪;臣子恨，何时灭。 
-- 驾长车踏破，贺兰山缺。 
-- 壮志饥餐胡虏肉，笑谈渴饮匈奴血。
-- 待从头、收拾旧江山，朝天阙。
+
+怒发冲冠，凭阑处、潇潇雨歇。<br/>
+抬望眼，仰天长啸，壮怀激烈。<br/>
+三十功名尘与土，八千里路云和月。<br/>
+莫等闲、白了少年头，空悲切。<br/>
+靖康耻，犹未雪;臣子恨，何时灭。<br/>
+驾长车踏破，贺兰山缺。<br/>
+壮志饥餐胡虏肉，笑谈渴饮匈奴血。<br/>
+待从头、收拾旧江山，朝天阙。<br/>
 
    <br/>
  
 > 2、水调歌头·中秋 - 苏轼
-- 明月几时有?把酒问青天。
-- 不知天上宫阙，今夕是何年。
-- 我欲乘风归去，又恐琼楼玉宇，高处不胜寒。
-- 起舞弄清影，何似在人间!
-- 转朱阁，低绮户，照无眠。
-- 不应有恨，何事长向别时圆?
-- 人有悲欢离合，月有阴睛圆缺，此事古难全。
-- 但愿人长久，千里共蝉娟。
+
+明月几时有?把酒问青天。<br/>
+不知天上宫阙，今夕是何年。<br/>
+我欲乘风归去，又恐琼楼玉宇，高处不胜寒。<br/>
+起舞弄清影，何似在人间!<br/>
+转朱阁，低绮户，照无眠。<br/>
+不应有恨，何事长向别时圆?<br/>
+人有悲欢离合，月有阴睛圆缺，此事古难全。<br/>
+但愿人长久，千里共蝉娟。<br/>
  
   <br/>
 
 > 3、念奴娇·赤壁怀古 - 苏轼
-- 大江东去，浪淘尽，千古风流人物。
-- 故垒西边，人道是、三国周郎赤壁。
-- 乱石穿空，惊涛拍岸，卷起千堆雪。
-- 江山如画，一时多少豪杰。
-- 遥想公谨当年，小乔初嫁了，雄姿英发。
-- 羽扇纶巾，谈笑间、樯橹灰飞烟灭。
-- 故国神游，多情应笑我，早生华发，
-- 人生如梦，一尊还酹江月。
+
+大江东去，浪淘尽，千古风流人物。<br/>
+故垒西边，人道是、三国周郎赤壁。<br/>
+乱石穿空，惊涛拍岸，卷起千堆雪。<br/>
+江山如画，一时多少豪杰。<br/>
+遥想公谨当年，小乔初嫁了，雄姿英发。<br/>
+羽扇纶巾，谈笑间、樯橹灰飞烟灭。<br/>
+故国神游，多情应笑我，早生华发，<br/>
+人生如梦，一尊还酹江月。<br/>
 
   <br/>
  
 > 4、江城子 乙卯正月二十日夜记梦 - 苏轼
-- 十年生死两茫茫。
-- 不思量，自难忘。
-- 千里孤坟，无处话凄凉。
-- 纵使相逢应不识，
-- 尘满面，鬓如霜。
-- 夜来幽梦忽还乡。
-- 小轩窗，正梳妆。
-- 相顾无言，惟有泪千行。
-- 料得年年肠断处，
-- 明月夜，短松冈。
+
+十年生死两茫茫。<br/>
+不思量，自难忘。<br/>
+千里孤坟，无处话凄凉。<br/>
+纵使相逢应不识，<br/>
+尘满面，鬓如霜。<br/>
+夜来幽梦忽还乡。<br/>
+小轩窗，正梳妆。<br/>
+相顾无言，惟有泪千行。<br/>
+料得年年肠断处，<br/>
+明月夜，短松冈。<br/>
 
   <br/>
  
 > 5、永遇乐·京口北固亭怀古 - 辛弃疾
-- 千古江山，英雄无觅，孙仲谋处。舞榭歌台，风流总被雨打风吹去。
-- 斜阳草树，寻常巷陌，人道寄奴曾住。想当年，金戈铁马，气吞万里如虎。
-- 元嘉草草，封狼居胥，赢得仓皇北顾。四十三年，望中犹记，烽火扬州路。
-- 可堪回首，佛狸祠下，一片神鸦社鼓。凭谁问，廉颇老矣，尚能饭否？
+
+千古江山，英雄无觅，孙仲谋处。舞榭歌台，风流总被雨打风吹去。<br/>
+斜阳草树，寻常巷陌，人道寄奴曾住。想当年，金戈铁马，气吞万里如虎。<br/>
+元嘉草草，封狼居胥，赢得仓皇北顾。四十三年，望中犹记，烽火扬州路。<br/>
+可堪回首，佛狸祠下，一片神鸦社鼓。凭谁问，廉颇老矣，尚能饭否？<br/>
  
   <br/>
  
 > 6、青玉案·元夕 - 辛弃疾
-- 东风夜放花千树，更吹落，星如雨。
-- 宝马雕车香满路。
-- 凤箫声动，玉壶光转，一夜鱼龙舞。
-- 蛾儿雪柳黄金缕，笑语盈盈暗香去。
-- 众里寻他千百度，蓦然回首，那人却在灯火阑珊处。
+
+东风夜放花千树，更吹落，星如雨。<br/>
+宝马雕车香满路。<br/>
+凤箫声动，玉壶光转，一夜鱼龙舞。<br/>
+蛾儿雪柳黄金缕，笑语盈盈暗香去。<br/>
+众里寻他千百度，蓦然回首，那人却在灯火阑珊处。<br/>
 
   <br/>
   
 > 7、桂枝香·金陵怀古 - 王安石
-- 登临送目，正故国晚秋，天气初肃。
-- 千里澄江似练，翠峰如簇。
-- 归帆去棹残阳里，背西风，酒旗斜矗。
-- 彩舟云淡，星河鹭起，画图难足。
-- 念往昔，繁华竞逐，叹门外楼头，悲恨相续。
-- 千古凭高对此，谩嗟荣辱。
-- 六朝旧事随流水，但寒烟衰草凝绿。
-- 至今商女，时时犹唱，后庭遗曲。
+
+登临送目，正故国晚秋，天气初肃。<br/>
+千里澄江似练，翠峰如簇。<br/>
+归帆去棹残阳里，背西风，酒旗斜矗。<br/>
+彩舟云淡，星河鹭起，画图难足。<br/>
+念往昔，繁华竞逐，叹门外楼头，悲恨相续。<br/>
+千古凭高对此，谩嗟荣辱。<br/>
+六朝旧事随流水，但寒烟衰草凝绿。<br/>
+至今商女，时时犹唱，后庭遗曲。<br/>
 
   <br/>
  
 > 8、鹊桥仙 - 秦观
-- 纤云弄巧，飞星传恨，
-- 银汉迢迢暗度。
-- 金风玉露一相逢，
-- 便胜却、人间无数。
-- 柔情似水，佳期如梦，
-- 忍顾鹊桥归路。
-- 两情若是久长时，
-- 又岂在、朝朝暮暮。
+
+纤云弄巧，飞星传恨，<br/>
+银汉迢迢暗度。<br/>
+金风玉露一相逢，<br/>
+便胜却、人间无数。<br/>
+柔情似水，佳期如梦，<br/>
+忍顾鹊桥归路。<br/>
+两情若是久长时，<br/>
+又岂在、朝朝暮暮。<br/>
 
   <br/>
  
 > 9、虞美人 - 李煜
-- 春花秋月何时了，
-- 往事知多少。
-- 小楼昨夜又东风，
-- 故国不堪回首月明中。
-- 雕栏玉砌应犹在，
-- 只是朱颜改。
-- 问君能有几多愁，
-- 恰似一江春水向东流。
+
+春花秋月何时了，<br/>
+往事知多少。<br/>
+小楼昨夜又东风，<br/>
+故国不堪回首月明中。<br/>
+雕栏玉砌应犹在，<br/>
+只是朱颜改。<br/>
+问君能有几多愁，<br/>
+恰似一江春水向东流。<br/>
 
   <br/>
  
 > 10、一剪梅 - 李清照
-- 红藕香残玉簟秋。
-- 轻解罗裳，独上兰舟。
-- 云中谁寄锦书来?
-- 雁字回时，月满西楼。
-- 花自飘零水自流。
-- 一种相思，两处闲愁。
-- 此情无计可消除，
-- 才下眉头，却上心头。
+
+红藕香残玉簟秋。<br/>
+轻解罗裳，独上兰舟。<br/>
+云中谁寄锦书来?<br/>
+雁字回时，月满西楼。<br/>
+花自飘零水自流。<br/>
+一种相思，两处闲愁。<br/>
+此情无计可消除，<br/>
+才下眉头，却上心头。<br/>
 
 
 
