--- a/docs/书法/轨迹/书法练习轨迹--明月几时有-无图版.md
+++ b/docs/书法/轨迹/书法练习轨迹--明月几时有-无图版.md
@@ -88,14 +88,14 @@
 
 ### 2.1、2020
 
-> - 2020年初始练习的书法“作品”简直**亮瞎眼**。**观者慎重！！！** --20201117
+> 2020年初始练习的书法“作品”简直**亮瞎眼**。**观者慎重！！！** --20201117
 
 #### 2.1.1、202009
 
 - [x] 1、20200926
 - 初始练习，自己随便写的。
 - [img1]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20200926_162548.jpg )
-> - 无笔法，无锋芒。自以为是，自作高深。若为书法，则是丑书典型。 --20201117
+- 无笔法，无锋芒。自以为是，自作高深。若为书法，则是丑书典型。 --20201117
 
 ---
 
@@ -104,7 +104,7 @@
 - [x] 2、20201014
 - 临摹了几天颜真卿的《多宝塔碑》。写的**很差劲**。
 - [img2]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201014_222553.jpg )
-> - 此字如婴儿学步，蹒跚而行。不整齐，不清晰，不美观。但也是千里之行，始于足下。大道之基，书法之始。 --20210126
+- 此字如婴儿学步，蹒跚而行。不整齐，不清晰，不美观。但也是千里之行，始于足下。大道之基，书法之始。 --20210126
 
 ---
 
@@ -117,8 +117,7 @@
 - [x] 4、20201024
 - 差评。
 - [img4]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201024_223706.jpg )
-
-- [ ] 近一个多月（十月份）基本在练习多宝塔的偏旁部首，基本笔画。字练的少。 --20201116
+- 近一个多月（十月份）基本在练习多宝塔的偏旁部首，基本笔画。字练的少。 --20201116
 
 ---
 
@@ -127,45 +126,45 @@
 - [x] 5、20201108
 - 临摹《多宝塔碑》。
 - [img5]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201108_204444.jpg )
-> - 对比之前有些进步。加油。 --20201111
-> - 无一字可取。 --20201116
+- 对比之前有些进步。加油。 --20201111
+- 无一字可取。 --20201116
 
 ---
 
 - [x] 6、20201115
 - 临摹《多宝塔碑》。
 - [img6]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201115_181517.jpg )
-> - 唯 “上”  “人”能看。 --20201116
-> - 貌似不能示人。 --20201123
-- [ ] 这半个月（十一月上旬）开始练习多宝塔的字。--20201116
+- 唯 “上”  “人”能看。 --20201116
+- 貌似不能示人。 --20201123
+- 这半个月（十一月上旬）开始练习多宝塔的字。--20201116
 
 ---
 
 - [x] 7、20201122
 - 临摹《多宝塔碑》。
 - [img7]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201122_100634.jpg )
-> - 貌似没有进步。 --20201123
+- 貌似没有进步。 --20201123
 
 ---
 
 - 20201122
 - 临摹《多宝塔碑》。
 - [img8]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201122_152730.jpg )
-> - 坚持。古今成大事者，不唯有超世之才，亦必有坚韧不拔之志。--20201123
+- 坚持。古今成大事者，不唯有超世之才，亦必有坚韧不拔之志。--20201123
 
 ----
 
 - [x] 8、20201130
 - 临摹《多宝塔碑》。
 - [img9]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201128_171336.jpg )
-> - 继续练。  --20201130
+- 继续练。  --20201130
 
 ---
 
 - 20201130
 - 临摹《多宝塔碑》。
 - [img10]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201128_171400.jpg )
-> - 临摹《春晓》，认识了几个繁体字：“覺” “暁” “處 䖏” --20201130
+- 临摹《春晓》，认识了几个繁体字：“覺” “暁” “處 䖏” --20201130
 
 ----
 
@@ -173,7 +172,7 @@
 
 - [x] 9、20201207
 - [img11]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201206_141654.jpg )
-> - 貌似日期写错了，是周日写的，应该是 20201206。  白天拍的照片更清楚，没有阴影，貌似比晚上拍的照片的字好看。   --20201214
+- 貌似日期写错了，是周日写的，应该是 20201206。  白天拍的照片更清楚，没有阴影，貌似比晚上拍的照片的字好看。   --20201214
 
 ----
 
@@ -195,31 +194,31 @@
 
 - 20201207
 - [img12]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201206_141644.jpg )
-> - 乍一看，还可以。细品鉴，差得远。 --20201207
+- 乍一看，还可以。细品鉴，差得远。 --20201207
 
 ----
 
 - [x] 10、20201214
 - [img13]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201226_114106.jpg )
-> - 继续练。保持热爱，奔赴山海。  --20201214
+- 继续练。保持热爱，奔赴山海。  --20201214
 
 - [x] 11、20201216
 - [img14]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201226_114305.jpg )
-> - 十年如一日。练。  --20201228
+- 十年如一日。练。  --20201228
 
 ---
 
 - [x] 12、20201220
 - [img15]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20201226_114413.jpg )
-> - 这一周多（1219-1225）比较忙，有个比较紧急的项目，需要对接微信、支付宝支付，同步账单。我负责账单相关的部分-下载微信、支付宝账单，解析文件，保存账单，分析数据。 进入了所谓闭关的状态，晚上九点之后下班。虽然忙了一点，但是值得骄傲的是每天早晚的书法练习坚持了下来，虽然每次练习没够一小时，但也是三四十分钟以上。努力就有收获，坚持就是胜利。
-这周忙了一点，但很不错的是双休。休息时间比较充足，周六看了华仔的《拆弹专家2》，相当精彩的大片，全程无尿点。拼多多买的电饭锅坏了，换货，周日到了，煮了饭，这次还行。另外有些新闻，美国新冠日益严重，将近两千万患者。jack马叫嚣银行是当铺思想；支付宝上市失败；阿里被中央调查组进驻，需要进一步规范。《明星大侦探6》 《奔跑吧-黄河篇》 《大江大河2》 挺好看。 --20201228
+- 这一周多（1219-1225）比较忙，有个比较紧急的项目，需要对接微信、支付宝支付，同步账单。我负责账单相关的部分-下载微信、支付宝账单，解析文件，保存账单，分析数据。 进入了所谓闭关的状态，晚上九点之后下班。虽然忙了一点，但是值得骄傲的是每天早晚的书法练习坚持了下来，虽然每次练习没够一小时，但也是三四十分钟以上。努力就有收获，坚持就是胜利。
+- 这周忙了一点，但很不错的是双休。休息时间比较充足，周六看了华仔的《拆弹专家2》，相当精彩的大片，全程无尿点。拼多多买的电饭锅坏了，换货，周日到了，煮了饭，这次还行。另外有些新闻，美国新冠日益严重，将近两千万患者。jack马叫嚣银行是当铺思想；支付宝上市失败；阿里被中央调查组进驻，需要进一步规范。《明星大侦探6》 《奔跑吧-黄河篇》 《大江大河2》 挺好看。 --20201228
 
 ---
 
 - [x] 13、20201227
 - [img16]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2020/IMG_20210101_141310.jpg )
-> - 这里从左往右写的，貌似明白古代人为何自左向右写字。因为如果自右向左，袖子上容易沾墨迹，污染文字又弄脏衣服。所以自左向右方便很多。**思追古人，绪接来者**。这是书法的魅力吧。--20201228
-> - 有过则改，特此更正。古人书写习惯是自上往下，自右往左，如《兰亭集序》。网上查了一下资料，是从书简时代留下的习惯，左手执简，右手书写，更为方便省力。--20210202
+- 这里从左往右写的，貌似明白古代人为何自左向右写字。因为如果自右向左，袖子上容易沾墨迹，污染文字又弄脏衣服。所以自左向右方便很多。**思追古人，绪接来者**。这是书法的魅力吧。--20201228
+- 有过则改，特此更正。古人书写习惯是自上往下，自右往左，如《兰亭集序》。网上查了一下资料，是从书简时代留下的习惯，左手执简，右手书写，更为方便省力。--20210202
 
 <br/>
 
@@ -227,14 +226,14 @@
 
 ### 2.2、2021
 
-> - 二零二一，岁在辛丑。新的开始，新的起点。雄关漫道真如铁，而今漫步从头越。 --20210103
+> 二零二一，岁在辛丑。新的开始，新的起点。雄关漫道真如铁，而今漫步从头越。 --20210103
 
 #### 2.2.1、202101
 
 - [x] 14、20210101
 - [img17]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/IMG_20210101_141402.jpg )
-> - 练。重要的是输出，而不是消费。正如看电影要思考剧情，要写评论，否则只是娱乐，而非影评家。&ensp; &ensp;
-人之大敌为孤独，社交、运动、读书、听歌、练字皆可战而胜之。你的时间花在哪里？你对哪里了解的就会更多，就会超越一般人的技术水平。交朋友不需要酒肉兄弟，塑料姐妹，而是知心知己。运动需要长时间持续性的坚持，一天不可能减肥。读书需要思考，需要写笔记。所谓学而不思则罔，思而不学则殆。 因此必须抓住重点，长期坚持，时时思考，方能有所收获。--20210103
+- 练。重要的是输出，而不是消费。正如看电影要思考剧情，要写评论，否则只是娱乐，而非影评家。&ensp; &ensp;
+- 人之大敌为孤独，社交、运动、读书、听歌、练字皆可战而胜之。你的时间花在哪里？你对哪里了解的就会更多，就会超越一般人的技术水平。交朋友不需要酒肉兄弟，塑料姐妹，而是知心知己。运动需要长时间持续性的坚持，一天不可能减肥。读书需要思考，需要写笔记。所谓学而不思则罔，思而不学则殆。 因此必须抓住重点，长期坚持，时时思考，方能有所收获。--20210103
 
 ---
 
@@ -281,9 +280,9 @@
 
 - [img25]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202101/20210117001.jpg )
 
-> - 这周开始基本不用水写布，只用墨水和毛边纸练字。如果想要练好字，水写布确实不是正道，只能在逼不得已的情况下偶尔为之。因为水写布不是纸张，不能留存文字。所谓笔墨纸砚，书法要用毛笔蘸墨水写在纸上。此周基本临摹 多宝塔碑、明月几时有、登鹳雀楼、春晓。
-> - 重要的事情说三遍：**别用水写布、戒躁、坚持**。别用水写布、戒躁、坚持。别用水写布、戒躁、坚持。
-> - **大唐西京千福寺 多寳佛塔感應碑文 南陽岑勛撰 朝議郎判尚書武部貟外郎琅琊颜真卿書 朝散大夫檢校尚書都官郎中東海徐浩題額 粵妙法連華**    --20210118
+- 这周开始基本不用水写布，只用墨水和毛边纸练字。如果想要练好字，水写布确实不是正道，只能在逼不得已的情况下偶尔为之。因为水写布不是纸张，不能留存文字。所谓笔墨纸砚，书法要用毛笔蘸墨水写在纸上。此周基本临摹 多宝塔碑、明月几时有、登鹳雀楼、春晓。
+- 重要的事情说三遍：**别用水写布、戒躁、坚持**。别用水写布、戒躁、坚持。别用水写布、戒躁、坚持。
+- **大唐西京千福寺 多寳佛塔感應碑文 南陽岑勛撰 朝議郎判尚書武部貟外郎琅琊颜真卿書 朝散大夫檢校尚書都官郎中東海徐浩題額 粵妙法連華**    --20210118
 
 ---
 
@@ -360,13 +359,13 @@
 
 <br/>
 
-> 自2021-01-18至2021-01-31两周的照片都是 2021-01-31 周日下午拍的。基本都是一张含日期的照片（页面显示的图片，如：20210124），一张三页纸合在一起的照片（当日图片下的链接地址，需点击查看，如：img40）。  --20210201
+- 自2021-01-18至2021-01-31两周的照片都是 2021-01-31 周日下午拍的。基本都是一张含日期的照片（页面显示的图片，如：20210124），一张三页纸合在一起的照片（当日图片下的链接地址，需点击查看，如：img40）。  --20210201
 
 ---
 
 -  20210201记录
 
-> 此为上周（2021-01-25至2021-01-31）记录，一般都是周一记录上一周练习情况。标题为当天日期，内容为上周习作及感想。 --20210201
+- 此为上周（2021-01-25至2021-01-31）记录，一般都是周一记录上一周练习情况。标题为当天日期，内容为上周习作及感想。 --20210201
 
 - [x] 18、20210201
 
@@ -405,10 +404,8 @@
 
 <br/>
 
-> 对比半个月之前，貌似没啥进步。书法确实不能按“周”“月”作为单位以期进步，而是以“年”坚持练习才能有所寸进。书法之道，戒躁第一，贵在坚持。  --20210201
-<br/>
-
-> 不记录，不比较，不从过去的自己找信心，见不到自己的进步，确实容易枯燥、乏味、无聊、难以坚持下去。故而点点滴滴，一丝一毫，皆可记录。有趣才能坚持，充实方可长久。--20210202
+- 对比半个月之前，貌似没啥进步。书法确实不能按“周”“月”作为单位以期进步，而是以“年”坚持练习才能有所寸进。书法之道，戒躁第一，贵在坚持。  --20210201
+- 不记录，不比较，不从过去的自己找信心，见不到自己的进步，确实容易枯燥、乏味、无聊、难以坚持下去。故而点点滴滴，一丝一毫，皆可记录。有趣才能坚持，充实方可长久。--20210202
 
 ---
 
@@ -428,7 +425,7 @@
 >20210207002
 - [img58]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210207002.jpg )
 
-> 要过年了，加油。春节将至，假日来临，保持练字。 
+- 要过年了，加油。春节将至，假日来临，保持练字。 
 天下大事必作于细，天下难事必作于易。王羲之是从一池变黑的水逐步成为书圣，文徵明七八十岁还是每天临帖不辍，书法需要天赋更需要不懈的坚持。  --20210209
 
 ---
@@ -436,7 +433,7 @@
 - [x] 20、20210215
 
 > 二零二一二月八号，当天参加了一个业余书法活动
->
+
 - [img59]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210208001_.jpg )
 
 ---
@@ -454,10 +451,10 @@
 - [img64]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210213001.jpg )
 - [img65]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210214001.jpg )
 
-> 二零二一二月十一为除夕，春节过年了。年前（二月八号）参加了一个书法活动，是杭州西湖雷峰塔不远处的一家民宿组织的。来了六七人，有两位女生练字多年，是高手，其他都是菜鸟。大家喝喝茶，嗑嗑瓜子，聊聊天。不错。<br/>
-过年是留在杭州没回老家，领到了1000元留杭大红包（新冠疫情影响，政府鼓励提倡“非必要不返乡”），点赞。除夕夜饭店、超市基本都关门了，在麦当劳吃晚饭的，人还不少。然后八点钟看春晚，顺便整理便签文档。这个年过的也还行。 <br/>
-有打算留在杭州，正月初四到初六（20210215--20210217）在杭州临安看房，那里不限购，均价一万八九每平，比市区便宜一两万左右，90平的房子首付三成五六十万左右。虽然离杭州市区远了点，但有地铁，交通还算比较方便。 <br/>
-知易行难，生活总是充满不确定性。每次过年之后都有一个反思，一个变化。要考虑成家立业，结婚生子的问题。年后这几天练字时间短了，每天大概三四张左右，不像之前每天八张。毕竟练字目前不能解决吃饭问题，只是一个兴趣爱好。只能说，还是要坚持每天临帖不辍。 --20210219
+- 二零二一二月十一为除夕，春节过年了。年前（二月八号）参加了一个书法活动，是杭州西湖雷峰塔不远处的一家民宿组织的。来了六七人，有两位女生练字多年，是高手，其他都是菜鸟。大家喝喝茶，嗑嗑瓜子，聊聊天。不错。<br/>
+- 过年是留在杭州没回老家，领到了1000元留杭大红包（新冠疫情影响，政府鼓励提倡“非必要不返乡”），点赞。除夕夜饭店、超市基本都关门了，在麦当劳吃晚饭的，人还不少。然后八点钟看春晚，顺便整理便签文档。这个年过的也还行。 <br/>
+- 有打算留在杭州，正月初四到初六（20210215--20210217）在杭州临安看房，那里不限购，均价一万八九每平，比市区便宜一两万左右，90平的房子首付三成五六十万左右。虽然离杭州市区远了点，但有地铁，交通还算比较方便。 <br/>
+- 知易行难，生活总是充满不确定性。每次过年之后都有一个反思，一个变化。要考虑成家立业，结婚生子的问题。年后这几天练字时间短了，每天大概三四张左右，不像之前每天八张。毕竟练字目前不能解决吃饭问题，只是一个兴趣爱好。只能说，还是要坚持每天临帖不辍。 --20210219
 
 - [x] 21、20210222
 
@@ -468,8 +465,8 @@
 
 - [img68]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210218000001.jpg )
 - [img69]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210221000001.jpg )
-> 坚持不易，且行且珍惜。  --20210223  <br/>
-> 为名，为利，做一件事，不是发自内心的热爱，很难做的好，做的长。保持初心，顺其自然，乐在其中，方能长久。  --20210225
+- 坚持不易，且行且珍惜。  --20210223  <br/>
+- 为名，为利，做一件事，不是发自内心的热爱，很难做的好，做的长。保持初心，顺其自然，乐在其中，方能长久。  --20210225
 
 
 - [x] 22、20210301
@@ -477,8 +474,8 @@
 - [img70]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210223000001.jpg )
 - [img71]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202102/20210225000001.jpg )
 
-> 周四（2月25）看房子。周五（2月26）搬家。周六（2月27）回老家相亲。这周事情比较密集，而且换了新环境，租房比之前的小了点，需要几天习惯。因此练字时间短了点。<br/>
-生活还是要靠工作，兴趣爱好只是调剂。重点重心还是要放在提高专业技能以及一些人生大事上，有空闲有余力再做一些其他事情。--20210302  
+- 周四（2月25）看房子。周五（2月26）搬家。周六（2月27）回老家相亲。这周事情比较密集，而且换了新环境，租房比之前的小了点，需要几天习惯。因此练字时间短了点。<br/>
+- 生活还是要靠工作，兴趣爱好只是调剂。重点重心还是要放在提高专业技能以及一些人生大事上，有空闲有余力再做一些其他事情。--20210302  
 
 #### 2.2.3、202103
 
@@ -524,7 +521,7 @@
 
 ---
 
-> 身体是革命的本钱，健康是1，金钱、名誉、地位、房子、车子……这些都是0。 --20220426
+- 身体是革命的本钱，健康是1，金钱、名誉、地位、房子、车子……这些都是0。 --20220426
 
 | 时间管理 | 重要    | 一般     | 不重要   |
 | ----     | ----    | -----    | -----    |
@@ -557,8 +554,8 @@
 - [img79]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103120002.jpg )
 - [img80]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103120003.jpg )
 
->  本周（20210308-20210314）更新比较早，一般情况应该是次周一记录当周练习，今天想写然后就写了。所谓乘兴而来，兴尽而返是也。<br/>
-**书法于我而言，可修心养性，陶冶情操，培养良好的作息习惯，丰富匮乏的精神生活**。把打游戏，看直播，看电影电视综艺这些比较娱乐比较浪费时间的活动放在练字上，放在充实生活，提高技能上。<br/>
+- 本周（20210308-20210314）更新比较早，一般情况应该是次周一记录当周练习，今天想写然后就写了。所谓乘兴而来，兴尽而返是也。<br/>
+- **书法于我而言，可修心养性，陶冶情操，培养良好的作息习惯，丰富匮乏的精神生活**。把打游戏，看直播，看电影电视综艺这些比较娱乐比较浪费时间的活动放在练字上，放在充实生活，提高技能上。<br/>
 感觉练字分三种境界：眼中有字，心中无字。眼中有字，心中亦有字。眼中无字，心中亦无字。  其实都是唯手熟尔。--20210312
 
 ---
@@ -568,9 +565,9 @@
 - [img81]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103140001.jpg )
 - [img82]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103170001.jpg )
 
->  前几周杂事较多，并且都是单休，周末基本没有属于自己的时间。这周末（0320-0321）双休，但是天气不是太好，没有出去。于是抽空把小区熟悉一下，绕着小区内部转了一圈。<br/>
-这两天主要就是整理资料、看点综艺、学习java、散步、看小说等等。<br/>
-貌似书法练习历程当成日记周记了。这也是意料之中的事，书法菜鸟哪会有专业的书法理论知识，只有感慨感想而已。但也只有这样，才能持之以恒，一以贯之。  --20210322
+- 前几周杂事较多，并且都是单休，周末基本没有属于自己的时间。这周末（0320-0321）双休，但是天气不是太好，没有出去。于是抽空把小区熟悉一下，绕着小区内部转了一圈。<br/>
+- 这两天主要就是整理资料、看点综艺、学习java、散步、看小说等等。<br/>
+- 貌似书法练习历程当成日记周记了。这也是意料之中的事，书法菜鸟哪会有专业的书法理论知识，只有感慨感想而已。但也只有这样，才能持之以恒，一以贯之。  --20210322
 
 ---
 
@@ -594,7 +591,8 @@
 - [img89]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103280003.jpg )
 - [img90]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202103/202103280004.jpg )
 
->  还是写的不咋地，继续练吧。  --20210329
+- 还是写的不咋地，继续练吧。  --20210329
+
 ```
 天之道，损有余而补不足，是故虚胜实，不足胜有余。
 其意博，其理奥，其趣深，天地之象分，阴阳之候列，变化之由表，死生之兆彰，
@@ -629,8 +627,8 @@
 - [img98]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021040302.jpg )
 
 
->  练字让我冷静。 <br/>
-心烦意乱，神思不属，需要安心。冲动妄为，奢求空想，需要定神。欲思其成必虑其败。--20210406 <br/>
+- 练字让我冷静。 <br/>
+- 心烦意乱，神思不属，需要安心。冲动妄为，奢求空想，需要定神。欲思其成必虑其败。--20210406 <br/>
 
 ```
 人心惟危，道心惟微；惟精惟一，允执厥中。
@@ -655,7 +653,7 @@
 - [img101]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021041101.jpg )
 - [img102]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021041102.jpg )
 
->  一寸光阴一寸金，寸金难买寸光阴。--20210412
+- 一寸光阴一寸金，寸金难买寸光阴。--20210412
 
 ---
 
@@ -669,17 +667,17 @@
 - [img105]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021041601.jpg )
 - [img106]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021041602.jpg )
 
-> 近期大事 <br/>
-1、四月九号  <br/>
+- 近期大事 <br/>
+- 1、四月九号  <br/>
 杭州行政区调整：撤销杭州市上城区、江干区，设立新的杭州市上城区；撤销杭州市下城区、拱墅区，设立新的杭州市拱墅区；撤销杭州市余杭区，设立新的杭州市余杭区；设立杭州市临平区；设立杭州市钱塘区。此次调整后，杭州市下辖10个区、2个县，代管1个县级市，分别为：上城区、拱墅区、西湖区、滨江区、萧山区、余杭区、临平区、钱塘区、富阳区、临安区、桐庐县、淳安县、建德市，总体建制数不变。与时俱进，健康发展。 <br/>
-2、四月十号 <br/>
+- 2、四月十号 <br/>
 市场监管总局依法作出行政处罚决定，责令阿里巴巴集团停止违法行为，并处以其2019年中国境内销售额4557.12亿元4%的罚款，计182.28亿元。推动平台经济规范健康持续发展。 <br/>
-3、四月十四 <br/>
+- 3、四月十四 <br/>
 女网红遭CEO男友65页ppt长文控诉。世风日下，人心不古。 <br/>
-4、四月十八 <br/>
+- 4、四月十八 <br/>
 美多地民众抗议警察暴力执法。中国超2亿人单身。狗狗币一年涨幅超400倍。 <br/>
 
-> 生活还是要找一个兴趣爱好，否则何以打发漫漫时光。书法、音乐、书籍都是我们的好朋友好伴侣。
+- 生活还是要找一个兴趣爱好，否则何以打发漫漫时光。书法、音乐、书籍都是我们的好朋友好伴侣。 <br/>
 所谓人生需一寄托，以慰漫漫时光。
 --20210418
 
@@ -722,7 +720,7 @@
 - [img115]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021042503.jpg )
 - [img116]( https://xyqin.coding.net/p/my/d/imgs/git/raw/master/mingyue/2021/202104/2021042504.jpg )
 
-> 练字即练心，心静则神定。漫漫人生，知足常乐。  --20210425
+- 练字即练心，心静则神定。漫漫人生，知足常乐。  --20210425
 
 ```
 
@@ -776,7 +774,7 @@
 - [img126]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202105/2021050202.jpg )
 
 
->  练，练，练。  十日画一水，五日画一石。能事不受相促迫，王宰始肯留真迹。--20210502 <br/>
+- 练，练，练。  十日画一水，五日画一石。能事不受相促迫，王宰始肯留真迹。--20210502 <br/>
 
 ```
 
@@ -804,9 +802,9 @@
 - [img129]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202105/2021050701.jpg )
 - [img130]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202105/2021050901.jpg )
 
->  之前那种15格，一张毛边纸能写4x15=60个字的毛边纸没有了。这周开始在12格（4x12=48）的毛边纸上练字，单个格子小了一点，有点不习惯，字貌似比之前也丑了点。<br/>
+- 之前那种15格，一张毛边纸能写4x15=60个字的毛边纸没有了。这周开始在12格（4x12=48）的毛边纸上练字，单个格子小了一点，有点不习惯，字貌似比之前也丑了点。<br/>
 不知从何时开始，练字没怎么像开始时那样严格模仿《多宝塔碑》的颜体字了。书法，书法，书之法度也。不沿袭标准、规范、法度，难以成就真正的书法。<br/>
-但是，古人有古人的标准，今人有今人的看法，每个人对书法的见解都不一样。在我看来，整齐、美观、艺术、给人以美的感受的字就是书法。<br/>
+- 但是，古人有古人的标准，今人有今人的看法，每个人对书法的见解都不一样。在我看来，整齐、美观、艺术、给人以美的感受的字就是书法。<br/>
 道可道，非常道。书可书，非常书。天赋与毅力并存，文化与精神混一，方能写好书法，成就书法。--20210509 <br/>
 
 ---
@@ -896,7 +894,7 @@
 - [img150]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202105/2021053101.jpg )
 
 
-```vb
+```java
 一切有为法，如梦幻泡影，如露亦如电，应作如是观。 -- 《金刚经》
 ```
 
@@ -923,7 +921,7 @@
 - [img153]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202106/2021060601.jpg )
 - [img154]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202106/2021060602.jpg )
 
->  拳不离手，曲不离口。人生漫漫，练字不止。躺平与奋斗，需要一个平衡。 --20210607 <br/>
+- 拳不离手，曲不离口。人生漫漫，练字不止。躺平与奋斗，需要一个平衡。 --20210607 <br/>
 
 ```
 这周（20210531-20210606）临安的房子网签了，商品房预售合同也寄给我了，历时三四个月的购房之路终于告一段落，下一步就是等待银行放贷。
@@ -982,8 +980,7 @@
 - 2、大蒜捣碎，加热，敷于疼痛的牙齿处。这个方法没试过，不好评价。 <br/>
 - 3、含一片生姜于牙疼处，约十分钟。此法可谓药到病除，含过之后，牙齿就不怎么疼了，配合第四种方法便逐渐痊愈。 <br/>
 - 4、吃话梅。含生姜之后，吃了一些话梅。不知道治愈牙疼的是生姜还是话梅，或者两者皆有。 <br/>
-- 5、预防大于治理，治标不如治本。平常要注意牙齿健康，早晚刷牙，不吃少吃辛辣、坚硬、刺激性食物。牙疼严重的话还是要及时就医。 <br/>
---20210609
+- 5、预防大于治理，治标不如治本。平常要注意牙齿健康，早晚刷牙，不吃少吃辛辣、坚硬、刺激性食物。牙疼严重的话还是要及时就医。--20210609
 
 
 ```
@@ -1013,7 +1010,8 @@
 - [img159]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202106/2021061301.jpg )
 - [img160]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202106/2021061302.jpg )
 
->  练 practice 。 good good study，day day up 。--20210613 <br/>
+- 练 practice 。 good good study，day day up 。--20210613 <br/>
+
 ```
 好记性不如烂笔头。
 前世之事，后事之师。
@@ -1038,7 +1036,7 @@
 - [img165]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202106/2021062001.jpg )
 - [img166]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202106/2021062002.jpg )
 
->  看了张艺谋的《悬崖之上》，深感今日的幸福生活来之不易。但愿朝阳常照我土，莫忘烈士鲜血满地。 --20210620 <br/>
+- 看了张艺谋的《悬崖之上》，深感今日的幸福生活来之不易。但愿朝阳常照我土，莫忘烈士鲜血满地。 --20210620 <br/>
 
 ```
 七律·到韶山  毛主席
@@ -1067,7 +1065,7 @@
 - [img170]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202106/2021062703.jpg )
 
 
-> 《武林外传》不愧是经典，下饭神剧，百看不厌。 --20210628 <br/>
+- 《武林外传》不愧是经典，下饭神剧，百看不厌。 --20210628 <br/>
 
 ```
 说一下目前在看的综艺：《奔跑吧 第五季》（《奔跑吧兄弟 第九季》） 《五十公里桃花坞》 《极限挑战 第七季》 《向往的生活 第五季》 《心动的信号 第四季》，这些都比较有趣、搞笑。
@@ -1145,7 +1143,7 @@
 - [img177]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202107/2021070401.jpg )
 - [img178]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202107/2021070402.jpg )
 
->  十年磨一剑。 --20210705 <br/>
+- 十年磨一剑。 --20210705 <br/>
 
 ```
 剑客/述剑
@@ -1207,8 +1205,8 @@
 - [img182]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202107/2021071001.jpg )
 
 
-> 练。 --20210711 <br/>
-> 读书破万卷，下笔如有神。书读百遍，其义自见。一万小时定律。熟能生巧。练，练，练。 <br/>
+- 练。 --20210711 <br/>
+- 读书破万卷，下笔如有神。书读百遍，其义自见。一万小时定律。熟能生巧。练，练，练。 <br/>
 
 ```
 这周热点事件一句话总结：林生斌坐滴滴去吃徽州宴。真是 突破道德底线，败坏社会风气，危害国家安全。
@@ -1234,7 +1232,7 @@
 - [img188]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202107/2021071802.jpg )
 
 
-> 走出去，引进来。练下去，好起来。 --20210719 <br/>
+- 走出去，引进来。练下去，好起来。 --20210719 <br/>
 
 ```
 蝶恋花·春景
@@ -1325,7 +1323,7 @@
 - [img191]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202107/2021072401.jpg )
 - [img192]( https://gitlab.com/xuyq123/imgs/-/raw/master/mingyue/2021/202107/2021072402.jpg )
 
-> 这周世界大雨滂沱，河南郑州暴雨，浙江台风登陆。祈愿风调雨顺，国泰民安。 --20210726 <br/>
+- 这周世界大雨滂沱，河南郑州暴雨，浙江台风登陆。祈愿风调雨顺，国泰民安。 --20210726 <br/>
 
 ```
 2021年7月，河南省郑州市连遭暴雨袭击引发网友关注。
@@ -1349,7 +1347,7 @@
 - [img195]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202107/2021072901.jpg )
 - [img196]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202107/2021073001.jpg )
 
-> 一生只做一件事，一生做好一件事。 --20210801 <br/>
+- 一生只做一件事，一生做好一件事。 --20210801 <br/>
 
 ```
 大丈夫，生不当五鼎食，死则五鼎烹。
@@ -1377,9 +1375,9 @@
 - [img200]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202108/2021080501.jpg )
 
 
-> 得失，进退，贫富，生死。
-> 健康与疾病，平庸与天才，贫穷与富贵，卑贱与高尚。
-> 人生在世，各有缘法。 --20210807  <br/>
+- 得失，进退，贫富，生死。
+- 健康与疾病，平庸与天才，贫穷与富贵，卑贱与高尚。
+- 人生在世，各有缘法。 --20210807  <br/>
 
 ```
 习练书法及记录书法练习轨迹意义有二：退可修身养性，诚意正心。进则名扬天下，光耀四海。
@@ -1421,7 +1419,7 @@
 - [img207]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202108/20210814001.jpg )
 - [img208]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202108/20210815001.jpg )
 
-> 临帖。 --20210815  <br/>
+- 临帖。 --20210815  <br/>
 
 ---
 
@@ -1453,7 +1451,7 @@
 - [img212]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202108/20210821002.jpg )
 
 
-> 读万卷书不如行万里路。世界那么大，要多出来走走。 --20210823  <br/>
+- 读万卷书不如行万里路。世界那么大，要多出来走走。 --20210823  <br/>
 
 ```
 这周末活动较多，既锻炼身体，又开阔视野。
@@ -1485,7 +1483,7 @@
 - [img216]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202108/20210829001.jpg )
 
 
-> 七月流火，八月未央。 --20210829  <br/>
+- 七月流火，八月未央。 --20210829  <br/>
 
 ```
 七月流火，汉语成语，拼音是qī yuè liú huǒ(古读huǐ)，意思是说在农历七月天气转凉的时节，天刚擦黑的时候，可以看见大火星从西方落下去。 因人们误把“七月”理解成公历七月，所以“七月流火”在现代常被误认为天气炎热。
@@ -1527,7 +1525,7 @@ https://so.gushiwen.cn/mingju/juv_94d4f65964c4.aspx
 - [img221]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202109/20210905001.jpg )
 - [img222]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202109/20210905002.jpg )
 
-> 拳不离手，曲不离口。临帖练字，常挂心头。 --20210905  <br/>
+- 拳不离手，曲不离口。临帖练字，常挂心头。 --20210905  <br/>
 
 ```
 上周（20210823-20210829）注册了微信公众号，并且将书法练习记录、编程笔记及个人随想更新在此。
@@ -1597,7 +1595,7 @@ https://so.gushiwen.cn/mingju/juv_94d4f65964c4.aspx
 - [img231]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202109/20210918001.jpg )
 - [img232]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202109/20210919001.jpg )
 
-> 练字一周年了，貌似还是不咋地。继续练吧。 --20210921  <br/>
+- 练字一周年了，貌似还是不咋地。继续练吧。 --20210921  <br/>
 
 ---
 
@@ -1612,29 +1610,28 @@ https://so.gushiwen.cn/mingju/juv_94d4f65964c4.aspx
 - [img236]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202109/20210924001.jpg )
 
 
-> 心不静，字不正。貌似进入了疲惫期，现在练字也不能让我心静了。 --20210927  <br/>
+- 心不静，字不正。貌似进入了疲惫期，现在练字也不能让我心静了。 --20210927  <br/>
 
 <h4 id="r20210927"></h4>
 
 #####  如何克服疲惫期呢
 
-- 如何克服疲惫期呢？
-- 疲惫期又称疲倦期、疲劳期，指长时间专注于某一项活动之后，对该项活动感觉枯燥乏味、热情消退的时期。
+- 如何克服疲惫期呢？ <br/>
+疲惫期又称疲倦期、疲劳期，指长时间专注于某一项活动之后，对该项活动感觉枯燥乏味、热情消退的时期。 <br/>
+首先分析为何会进入疲惫期，长时间、重复性、机械性的单一活动肯定会无聊、枯燥、乏味。这是由人的生理构造决定的。 <br/>
 
-- 首先分析为何会进入疲惫期，长时间、重复性、机械性的单一活动肯定会无聊、枯燥、乏味。这是由人的生理构造决定的。
-
-- 克服疲惫期的方法如下：
-- 1、休息一段时间，这段时间不要练字，调整一下思绪。所谓休息是为了更好的赶路。
-- 2、练习其他字体或者换其他字帖。  <br/>
-    以前练楷书的现在可以练行书、草书、隶书。  <br/>
-	以前练颜体的现在可以练柳体、欧体。楷书四大家换着学。  <br/>
-	楷书四大家：颜柳欧赵。颜真卿、柳公权、欧阳询、赵孟頫。 <br/>
-	也可以练练以前未临摹过的字。  <br/>
-	总之要保持一种新鲜感。  <br/>
-- 3、有条件的话，可以学习国画。所谓书画不分家。诗中有画，画中有诗。
-- 4、读一些关于书法的书籍。腹有诗书气自华。
-- 5、去博物馆、艺术馆看一些书法名家的字帖，近距离感受艺术的气息。
-- 6、参加书法活动。向书法大家请教。
+- 克服疲惫期的方法如下： <br/>
+1、休息一段时间，这段时间不要练字，调整一下思绪。所谓休息是为了更好的赶路。 <br/>
+2、练习其他字体或者换其他字帖。  <br/>
+以前练楷书的现在可以练行书、草书、隶书。  <br/>
+以前练颜体的现在可以练柳体、欧体。楷书四大家换着学。  <br/>
+楷书四大家：颜柳欧赵。颜真卿、柳公权、欧阳询、赵孟頫。 <br/>
+也可以练练以前未临摹过的字。  <br/>
+总之要保持一种新鲜感。  <br/>
+- 3、有条件的话，可以学习国画。所谓书画不分家。诗中有画，画中有诗。 <br/>
+4、读一些关于书法的书籍。腹有诗书气自华。 <br/>
+5、去博物馆、艺术馆看一些书法名家的字帖，近距离感受艺术的气息。 <br/>
+6、参加书法活动。向书法大家请教。
 
 ---
 
@@ -1651,7 +1648,7 @@ https://so.gushiwen.cn/mingju/juv_94d4f65964c4.aspx
 - [img240]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202110/2021100201.jpg )
 
 
-> 寄意寒星荃不察，我以我血荐轩辕。 --20211004  <br/>
+- 寄意寒星荃不察，我以我血荐轩辕。 --20211004  <br/>
 
 ```
 这几天看了电视剧《功勋》。该剧用不同的叙事风格讲述八位功勋人物人生中最精彩的故事。
@@ -1673,9 +1670,9 @@ https://so.gushiwen.cn/mingju/juv_94d4f65964c4.aspx
 - [img244]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202110/2021100901.jpg )
 
 
-> 今年杭州的夏天格外漫长，现在已经十月份了，还是相当炎热，依然是三十多度。所谓“金秋十月”，已然名不副实。<br/>
-> 人若不能改变气候，那么只能适应它。正如大浪滔滔，唯有随波逐流。<br/>
-> 曾记否，到中流击水，浪遏飞舟？ --20211010  <br/>
+- 今年杭州的夏天格外漫长，现在已经十月份了，还是相当炎热，依然是三十多度。所谓“金秋十月”，已然名不副实。<br/>
+- 人若不能改变气候，那么只能适应它。正如大浪滔滔，唯有随波逐流。<br/>
+- 曾记否，到中流击水，浪遏飞舟？ --20211010  <br/>
 
 ```
 《沁园春·长沙》 毛泽东
@@ -1722,7 +1719,7 @@ https://so.gushiwen.cn/mingju/juv_94d4f65964c4.aspx
 - [img250]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202110/2021101501.jpg )
 - [img251]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202110/2021101601.jpg )
 
-> 主之以道，辅之以术。一阴一阳谓之道。  --20211017
+- 主之以道，辅之以术。一阴一阳谓之道。  --20211017
 
 ```
 三不三观
@@ -1740,7 +1737,7 @@ https://so.gushiwen.cn/mingju/juv_94d4f65964c4.aspx
 - [img252]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202110/2021102101.jpg )
 - [img253]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202110/2021102201.jpg )
 
-> 克制。坚持。  --20211025
+- 克制。坚持。  --20211025
 
 ```
 发现一个好用的笔记软件 flomo  好用很赞
@@ -1771,7 +1768,7 @@ flomo = flow + memo
 - [img256]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202110/2021102801.jpg )
 - [img257]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202110/2021102901.jpg )
 
-> 持之以恒，小心翼翼。谨言慎行，洁身自好。  --20211031
+- 持之以恒，小心翼翼。谨言慎行，洁身自好。  --20211031
 
 ```
 易难说
@@ -1795,7 +1792,7 @@ flomo = flow + memo
 - [img259]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202111/2021110301.jpg )
 
 
-> 冬天来了，春天还会远吗？ --20211108  <br/>
+- 冬天来了，春天还会远吗？ --20211108  <br/>
 
 ```
 杭州几乎没有春秋，只有夏冬。
@@ -1816,7 +1813,7 @@ flomo = flow + memo
 - [img262]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202111/2021111201.jpg )
 
 
-> 唯有热爱可抵漫长岁月。不可一日不练字。 --20211116  <br/>
+- 唯有热爱可抵漫长岁月。不可一日不练字。 --20211116  <br/>
 
 ```
 周末（2021114）去了杭州临安的青山湖绿道，此处背山面水，景色宜人。古木参天，中有绿道。草原辽阔，水面清圆。
@@ -1849,7 +1846,7 @@ flomo = flow + memo
 - [img265]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202111/2021111801.jpg )
 - [img266]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202111/2021111901.jpg )
 
-> 生命在于运动，坚持就是胜利。 --20211121  <br/>
+- 生命在于运动，坚持就是胜利。 --20211121  <br/>
 
 ---
 
@@ -1859,7 +1856,7 @@ flomo = flow + memo
 - [img268]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202111/2021112601.jpg )
 
 
-> 行动造就思想，思想控制行动。实践出真知。 --20211128  <br/>
+- 行动造就思想，思想控制行动。实践出真知。 --20211128  <br/>
 
 ---
 
@@ -1875,7 +1872,7 @@ flomo = flow + memo
 - [img271]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202112/2021120301.jpg )
 - [img272]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202112/2021120401.jpg )
 
-> 安忍不动如大地，静虑深密如秘藏。 --20211205  <br/>
+- 安忍不动如大地，静虑深密如秘藏。 --20211205  <br/>
 
 ```
 
@@ -1895,7 +1892,7 @@ flomo = flow + memo
 - [img275]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202112/2021120901.jpg )
 - [img276]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202112/2021121001.jpg )
 
-> 温良恭俭让。 --20211212  <br/>
+- 温良恭俭让。 --20211212  <br/>
 
 ```
 【出处】：《论语·学而》:“子贡曰:‘夫子温、良、恭、俭、让以得之。夫子之求之也,其诸异乎人之求之与。’ ”
@@ -1921,7 +1918,7 @@ flomo = flow + memo
 - [img279]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202112/2021121801.jpg )
 - [img280]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202112/2021121901.jpg )
 
-> 天将降大任于斯人也，必先苦其心志，劳其筋骨，饿其体肤，空乏其身，行拂乱其所为，所以动心忍性，曾益其所不能。 --20211219  <br/>
+- 天将降大任于斯人也，必先苦其心志，劳其筋骨，饿其体肤，空乏其身，行拂乱其所为，所以动心忍性，曾益其所不能。 --20211219  <br/>
 
 ---
 
@@ -1930,8 +1927,7 @@ flomo = flow + memo
 - [img281]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202112/2021122101.jpg )
 - [img282]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202112/2021122301.jpg )
 
-
-> 梦想还是要有的，万一实现了呢。 --20211227  <br/>
+- 梦想还是要有的，万一实现了呢。 --20211227  <br/>
 
 ---
 
@@ -1945,7 +1941,7 @@ flomo = flow + memo
 - [img285]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202112/2021123101.jpg )
 - [img286]( https://cdn.jsdelivr.net/gh/scott180/imgs/mingyue/2021/202112/2022010101.jpg )
 
-> 铁杵磨成针，功到自然成。 --20220103  <br/>
+- 铁杵磨成针，功到自然成。 --20220103  <br/>
 
 ```
 元旦三天打油诗
@@ -1976,7 +1972,7 @@ flomo = flow + memo
 
 ### 2.3、2022
 
-> - 二零二二，继续练字。 --20220109
+> 二零二二，继续练字。 --20220109
 
 #### 2.3.1、202201
 
@@ -2047,7 +2043,7 @@ flomo = flow + memo
 - [img291]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202201/2022012001.jpg )
 - [img292]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202201/2022012101.jpg )
 
-> 能事不受相促迫，王宰始肯留真迹。 --20220123
+- 能事不受相促迫，王宰始肯留真迹。 --20220123
 
 
 ---
@@ -2520,41 +2516,31 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 ### 3.2、三观
 
-> 我的三观：**制**恒强变真
+> 我的三观：制恒强变真
 
 
-- 我的三观：人生观、世界观、价值观，亦即人生信条、五字真言：制 恒 强 变 真。
-- 制：制怒、自制、克制，不冲动、不贪婪，任何时候都要保持冷静，泰山崩于前而色不变。心平气和才能修身养性。
-- 恒：持之以恒，学习任何知识、技能都要长久的奋斗，坚持就是胜利。
-- 强：坚强、自强、自信、自立。
-- 变：变化，见机行事，随机应变。世上唯一的不变就是变化。
-- 真：真诚、真实。待人以诚、待己以真。认识自己，了解自己的优点缺点，知道自己要干什么。世上乱花迷人眼，需要仔细甄别，方能去伪存真。
-
-  <br/>
-  
-- 前三条（制、恒、强）是对内，对自己，后两条（变 真）是对外，对别人。只有内外兼修，审慎笃行，两手都要抓，两手都要硬，才能辨别真伪，提高自身。
-- 若感觉观点太多，信条很杂，只需要记住一个字：制。即可。
-
-  <br/>
+- 我的三观：人生观、世界观、价值观，亦即人生信条、五字真言：制 恒 强 变 真。 <br/>
+**制**：制怒、自制、克制，不冲动、不贪婪，任何时候都要保持冷静，泰山崩于前而色不变。心平气和才能修身养性。 <br/>
+**恒**：持之以恒，学习任何知识、技能都要长久的奋斗，坚持就是胜利。<br/>
+**强**：坚强、自强、自信、自立。 <br/>
+**变**：变化，见机行事，随机应变。世上唯一的不变就是变化。 <br/>
+**真**：真诚、真实。待人以诚、待己以真。认识自己，了解自己的优点缺点，知道自己要干什么。世上乱花迷人眼，需要仔细甄别，方能去伪存真。 <br/>
  
-- 在高中的某一天，突然醒悟了以上五字真言，这些年为人处世基本照此原则，不破藩篱。
-- 第一条-制怒，实践的比较好，一直都比较冷静平和。
-- 后三条-强、变、真，也算是身体力行。
-- 第二条-恒 。。。 世间之事，知易行难。行百里者，半途而废者九十。小丑竟是我自己。(⊙︿⊙)
+- 前三条（制、恒、强）是对内，对自己，后两条（变 真）是对外，对别人。只有内外兼修，审慎笃行，两手都要抓，两手都要硬，才能辨别真伪，提高自身。 <br/>
+若感觉观点太多，信条很杂，只需要记住一个字：制。即可。 <br/>
 
-  <br/>
- 
-- 说一些名言警句（鸡汤）鼓励一下自己：
-- 东隅已逝，桑榆非晚。
-- 少壮不努力，老大徒伤悲。
-- 天下大事，必作于细。天下难事，必作于易。
-- 种一棵树最好的时间是十年前，其次是现在。
-- 古今成大事者，不唯有超世之才，亦必有坚韧不拔之志。
-- 宠辱不惊，看庭前花开花落;去留无意，望天上云卷云舒。
+- 在高中的某一天，突然醒悟了以上五字真言，这些年为人处世基本照此原则，不破藩篱。 <br/>
+第一条-制怒，实践的比较好，一直都比较冷静平和。 <br/>
+后三条-强、变、真，也算是身体力行。 <br/>
+第二条-恒 。。。 世间之事，知易行难。行百里者，半途而废者九十。小丑竟是我自己。(⊙︿⊙) <br/>
 
-`--202106`
-
-<br/>
+- 说一些名言警句（鸡汤）鼓励一下自己： <br/>
+东隅已逝，桑榆非晚。 <br/>
+少壮不努力，老大徒伤悲。 <br/>
+天下大事，必作于细。天下难事，必作于易。 <br/>
+种一棵树最好的时间是十年前，其次是现在。 <br/>
+古今成大事者，不唯有超世之才，亦必有坚韧不拔之志。 <br/>
+宠辱不惊，看庭前花开花落;去留无意，望天上云卷云舒。 `--202106` <br/> 
 
 <h4></h4>
 
@@ -2563,25 +2549,17 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 > [笔名汉字频率分析]( https://xushufa.cn/%E7%BB%83%E4%B9%A0/%E7%AC%94%E5%90%8D%E6%B1%89%E5%AD%97%E9%A2%91%E7%8E%87%E5%88%86%E6%9E%90.html ) &ensp; [作业部落]( https://www.zybuluo.com/scott180/note/1809817 ) &ensp; [语雀]( https://www.yuque.com/longguang123/ccgbto/flt0hf ) &ensp; [gitlab]( https://gitlab.com/xuyq123/calligraphy/-/blob/master/%E7%AC%94%E5%90%8D%E6%B1%89%E5%AD%97%E9%A2%91%E7%8E%87%E5%88%86%E6%9E%90.md )  &ensp; [csdn]( https://blog.csdn.net/xu180/article/details/118940065 ) &ensp; [github_pages]( https://scott180.github.io/calligraphy/%E7%AC%94%E5%90%8D%E6%B1%89%E5%AD%97%E9%A2%91%E7%8E%87%E5%88%86%E6%9E%90 )
 
 
-- 当前笔名：无为徐生
-- 本人笔名、昵称、马甲、小号、用户名，基本都是网站注册账号时所取，数量繁多，五花八门。自十多年前开始上网，历年注册账号，取的昵称已有几十个，都快赶上迅哥儿的笔名了。(/ □ \)
-- 六字：烟火尘埃落定
-- 五字：明明之明夜、明明之夜夜、星夜无恒恒、秋水共长天、青青子衿天、明明如夜夜
-- 四字：明明如夜、明如夜天、明来天明、明明夜夜、星夜无恒、如松之盛、天下有道、青青子襟、右耀去明、秋水长天、无为徐生、清风之明、昨夜星辰、东门之旭、长风雨下、清风徐来、原味吐司、星星水源、和山以水、安之若素、顿覆三千、呜呼呀嘿
-
-  <br/>
-
-- 三字：徐先生、明来其、名字清、一世界、雨中曲、天行健、明明了、明明夜、西之白、东门之、东有雨、徐庶一、飞一飞、斜风细、明之夜、明一天
-- 二字：博尔、古林、明天、深岸、甲方、龙光、知一、五湖、星名、源线、小明、长天、风云、老徐、迈克、改之、择之、星夜、一柏、小徐、风格、明业、明飞、问橐、明夜、明一、米明、明云、明也、玄明、斗米、明达、徐生、四海、广毅、麦克、和时、尚書、张及、李星、赵星、张三、李四、王五、赵六、测试、木叶、少焉、雾州、行之、东门
-- 一字：徐、吾、风、明
-
-  <br/>
-
-- 字母：xyqmmry、txyda、scott、scott180、xyqin、xy180、xu180、xuyq123、sc1、jack、Jack2Java、wuhu、longguang123、scott123、yxm、txyd、mmry、xyq、xu、gaizhi180、xy18484、test、xu123、whatyn、wuhuFly、xuyq、wuhuxy、xyqcalligraphy
-- 注册多少app就有多少账号，每个账号都会有昵称或者用户名，因为昵称可以修改，故而昵称的数量会远远大于账号数量（像QQ、微信用了几年甚至十几年，昵称不知道变了多少次）。简单说明一下，手机上安装了多少app，大家的昵称数量就会大于这些app的数量。所有人皆是如此，所以现代人的昵称都很多很多。
-- 笔名就像姓名一样，同名现象相当普遍，因此很难准确找到目标对象。相比而言，邮箱 1021151991@qq.com 具有唯一性，是有效的也是本人常用的。
-
-`--20210605`
+- 当前笔名：无为徐生 <br/>
+本人笔名、昵称、马甲、小号、用户名，基本都是网站注册账号时所取，数量繁多，五花八门。自十多年前开始上网，历年注册账号，取的昵称已有几十个，都快赶上迅哥儿的笔名了。(/ □ \) <br/>
+- 六字：烟火尘埃落定 <br/>
+五字：明明之明夜、明明之夜夜、星夜无恒恒、秋水共长天、青青子衿天、明明如夜夜 <br/>
+四字：明明如夜、明如夜天、明来天明、明明夜夜、星夜无恒、如松之盛、天下有道、青青子襟、右耀去明、秋水长天、无为徐生、清风之明、昨夜星辰、东门之旭、长风雨下、清风徐来、原味吐司、星星水源、和山以水、安之若素、顿覆三千、呜呼呀嘿 <br/>
+三字：徐先生、明来其、名字清、一世界、雨中曲、天行健、明明了、明明夜、西之白、东门之、东有雨、徐庶一、飞一飞、斜风细、明之夜、明一天 <br/>
+- 二字：博尔、古林、明天、深岸、甲方、龙光、知一、五湖、星名、源线、小明、长天、风云、老徐、迈克、改之、择之、星夜、一柏、小徐、风格、明业、明飞、问橐、明夜、明一、米明、明云、明也、玄明、斗米、明达、徐生、四海、广毅、麦克、和时、尚書、张及、李星、赵星、张三、李四、王五、赵六、测试、木叶、少焉、雾州、行之、东门 <br/>
+一字：徐、吾、风、明 <br/>
+字母：xyqmmry、txyda、scott、scott180、xyqin、xy180、xu180、xuyq123、sc1、jack、Jack2Java、wuhu、longguang123、scott123、yxm、txyd、mmry、xyq、xu、gaizhi180、xy18484、test、xu123、whatyn、wuhuFly、xuyq、wuhuxy、xyqcalligraphy <br/>
+- 注册多少app就有多少账号，每个账号都会有昵称或者用户名，因为昵称可以修改，故而昵称的数量会远远大于账号数量（像QQ、微信用了几年甚至十几年，昵称不知道变了多少次）。简单说明一下，手机上安装了多少app，大家的昵称数量就会大于这些app的数量。所有人皆是如此，所以现代人的昵称都很多很多。 <br/>
+笔名就像姓名一样，同名现象相当普遍，因此很难准确找到目标对象。相比而言，邮箱 1021151991@qq.com 具有唯一性，是有效的也是本人常用的。 `--20210605`
 
 <h4></h4>
 
