--- a/docs/书法/练习/书法练习轨迹--明月几时有.md
+++ b/docs/书法/练习/书法练习轨迹--明月几时有.md
@@ -1623,15 +1623,26 @@ https://so.gushiwen.cn/mingju/juv_94d4f65964c4.aspx
 - 克服疲惫期的方法如下： <br/>
 1、休息一段时间，这段时间不要练字，调整一下思绪。所谓休息是为了更好的赶路。 <br/>
 2、练习其他字体或者换其他字帖。  <br/>
-以前练楷书的现在可以练行书、草书、隶书。  <br/>
-以前练颜体的现在可以练柳体、欧体。楷书四大家换着学。  <br/>
-楷书四大家：颜柳欧赵。颜真卿、柳公权、欧阳询、赵孟頫。 <br/>
-也可以练练以前未临摹过的字。  <br/>
-总之要保持一种新鲜感。  <br/>
+&ensp;&ensp;&ensp;以前练楷书的现在可以练行书、草书、隶书。  <br/>
+&ensp;&ensp;&ensp;以前练颜体的现在可以练柳体、欧体。楷书四大家换着学。  <br/>
+&ensp;&ensp;&ensp;楷书四大家：颜柳欧赵。颜真卿、柳公权、欧阳询、赵孟頫。 <br/>
+&ensp;&ensp;&ensp;也可以练练以前未临摹过的字。  <br/>
+&ensp;&ensp;&ensp;总之要保持一种新鲜感。  <br/>
 - 3、有条件的话，可以学习国画。所谓书画不分家。诗中有画，画中有诗。 <br/>
 4、读一些关于书法的书籍。腹有诗书气自华。 <br/>
 5、去博物馆、艺术馆看一些书法名家的字帖，近距离感受艺术的气息。 <br/>
-6、参加书法活动。向书法大家请教。
+6、参加书法活动。向书法大家请教。 <br/>
+- 7、扛过去，继续练。逢山开路，遇水搭桥。横冲直撞，一往无前。 <br/>
+8、记录，分析。记录书法练习历程、拆解细节、分析原因。 <br/>
+9、随缘，平常心，不偏执，不妄念。 <br/>
+
+```
+前六个方法记于20210927。
+后三个方法记于20220507。
+记录，温习，更新。再记录，再温习，再更新。
+循环往复，温故知新。朝乾夕惕，生生不息。
+
+```
 
 ---
 
