--- a/docs/书法/轨迹/有感之杂说.md
+++ b/docs/书法/轨迹/有感之杂说.md
@@ -1,18 +1,8 @@
----
-title: 有感之杂说
-date: 2022-03-25
-tags:
- - 练习
- - 明月
-categories:
- -  轨迹
----
-
 # 有感之杂说
 
 <br />
 
-> 文档来自《[书法练习轨迹--明月几时有]( https://xushufa.cn )》中本人练字有感及生活杂谈。
+> 文档来自《[书法练习轨迹--明月几时有]( https://xushufa.cn )》中本人练字有感及生活杂谈。--2022-03-25
 
 <br />
 
