--- a/docs/书法/轨迹/自序.md
+++ b/docs/书法/轨迹/自序.md
@@ -1,18 +1,8 @@
----
-title: 自序
-date: 2022-03-27
-tags:
- - 练习
- - ReadMe
-categories:
- -  轨迹
----
-
 # 自序
 
 <br />
 
-> 文档来自《[书法练习轨迹]( https://xushufa.cn )》中本人自序。 
+> 文档来自《[书法练习轨迹]( https://xushufa.cn )》中本人自序。 --2022-03-27
 
 <br />
 
