--- a/docs/书法/轨迹/书法练习轨迹--明月几时有-无图版.md
+++ b/docs/书法/轨迹/书法练习轨迹--明月几时有-无图版.md
@@ -2474,13 +2474,51 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 ```
 
+#### 2.3.5、202205
+
+
+- [x] 82、20220509
+
+- [img337]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022050201.jpg )
+- [img338]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022050401.jpg )
+
+---
+
+- [img339]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022050601.jpg )
+- [img340]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022050801.jpg )
+
+- Just do it.  人生苦短，想做就做。--20220508
+
+- Think thrice before acting.  道阻且长，三思而行。--20220512
+
+---
+
+- [x] 83、20220516
+
+- [img341]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022051101.jpg )
+- [img342]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022051301.jpg )
+
+
+- 三重境
+
+- 手中有剑，心中无剑。<br />
+手中有剑，心中有剑。<br />
+手中无剑，心中无剑。<br />
+
+- 看山是山，看水是水。<br />
+看山不是山，看水不是水。<br />
+看山还是山，看水还是水。<br />
+
+- 昨夜西风凋碧树。独上高楼，望尽天涯路。<br />
+衣带渐宽终不悔，为伊消得人憔悴。<br />
+众里寻他千百度，蓦然回首，那人却在，灯火阑珊处。<br />
+
+
 ---
 
 <div STYLE="page-break-after: always;"></div>
 
 ## 三、作者
-
----
 
 ### 3.1、自述
 
@@ -2521,14 +2559,12 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 `--20220112`
 
-<br/>
 
 <h4 id="w20210628"></h4>
 
 ### 3.2、三观
 
 > 我的三观：制恒强变真
-
 
 - 我的三观：人生观、世界观、价值观，亦即人生信条、五字真言：制 恒 强 变 真。 <br/>
 **制**：制怒、自制、克制，不冲动、不贪婪，任何时候都要保持冷静，泰山崩于前而色不变。心平气和才能修身养性。 <br/>
@@ -2553,6 +2589,7 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 古今成大事者，不唯有超世之才，亦必有坚韧不拔之志。 <br/>
 宠辱不惊，看庭前花开花落;去留无意，望天上云卷云舒。 `--202106` <br/> 
 
+
 <h4></h4>
 
 ### 3.3、笔名
@@ -2572,10 +2609,10 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 - 注册多少app就有多少账号，每个账号都会有昵称或者用户名，因为昵称可以修改，故而昵称的数量会远远大于账号数量（像QQ、微信用了几年甚至十几年，昵称不知道变了多少次）。简单说明一下，手机上安装了多少app，大家的昵称数量就会大于这些app的数量。所有人皆是如此，所以现代人的昵称都很多很多。 <br/>
 笔名就像姓名一样，同名现象相当普遍，因此很难准确找到目标对象。相比而言，邮箱 1021151991@qq.com 具有唯一性，是有效的也是本人常用的。 `--20210605`
 
+
 <h4></h4>
 
 ### 3.4、账号
-
 
 > **平台**
 
