--- a/docs/书法/书法/《多宝塔碑》单字版.md
+++ b/docs/书法/书法/《多宝塔碑》单字版.md
@@ -4,109 +4,109 @@
 
 > [无为徐生]( https://blog.xushufa.cn )-[书法练习轨迹]( https://mp.weixin.qq.com/mp/appmsgalbum?__biz=Mzg4NDY2OTM0Mg==&action=getalbum&album_id=2015671980393365504 )-[多宝塔碑]( https://xushufa.cn )
 
-> [大唐西京千福寺多宝佛塔感应碑文]( https://github.com/scott180/shu )
+> [大唐西京]( https://xyqin.coding.net/public/my/shu/git/files ) [千福寺]( https://gitcode.net/xu180/shu ) [多宝佛塔]( https://www.npmjs.com/package/xushufa-shu ) [感应碑文]( https://github.com/scott180/shu )
 
 <br />
 
 ## 大唐西京
 
 0001大
-![0001大]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0001大.jpg )
+![0001大]( https://xyqin.coding.net/p/my/d/shu/git/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0001大.jpg )
 
 ---
 
 0002唐
-![0002唐]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0002唐.jpg )
+![0002唐]( https://xyqin.coding.net/p/my/d/shu/git/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0002唐.jpg )
 
 ---
 
 0003西
-![0003西]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0003西.jpg )
+![0003西]( https://xyqin.coding.net/p/my/d/shu/git/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0003西.jpg )
 
 ---
 
 0004京
-![0004京]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0004京.jpg )
+![0004京]( https://xyqin.coding.net/p/my/d/shu/git/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0004京.jpg )
 
 ---
 
 0005千
-![0005千]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0005千.jpg )
+![0005千]( https://xyqin.coding.net/p/my/d/shu/git/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0005千.jpg )
 
 ---
 
 0006福
-![0006福]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0006福.jpg )
+![0006福]( https://xyqin.coding.net/p/my/d/shu/git/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0006福.jpg )
 
 ---
 
 0007寺
-![0007寺]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0007寺.jpg )
+![0007寺]( https://xyqin.coding.net/p/my/d/shu/git/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0007寺.jpg )
 
 ---
 
 0008多
-![0008多]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0008多.jpg )
+![0008多]( https://xyqin.coding.net/p/my/d/shu/git/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0008多.jpg )
 
 ---
 
 0009宝
-![0009宝]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0009宝.jpg )
+![0009宝]( https://xyqin.coding.net/p/my/d/shu/git/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0009宝.jpg )
 
 ---
 
 0010佛
-![0010佛]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0010佛.jpg )
+![0010佛]( https://xyqin.coding.net/p/my/d/shu/git/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0010佛.jpg )
 
 ---
 
 0011塔
-![0011塔]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0011塔.jpg )
+![0011塔]( https://gitcode.net/xu180/shu/-/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0011塔.jpg )
 
 ---
 
 0012感
-![0012感]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0012感.jpg )
+![0012感]( https://gitcode.net/xu180/shu/-/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0012感.jpg )
 
 ---
 
 0013应
-![0013应]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0013应.jpg )
+![0013应]( https://gitcode.net/xu180/shu/-/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0013应.jpg )
 
 ---
 
 0014碑
-![0014碑]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0014碑.jpg )
+![0014碑]( https://gitcode.net/xu180/shu/-/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0014碑.jpg )
 
 ---
 
 0015文
-![0015文]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0015文.jpg )
+![0015文]( https://gitcode.net/xu180/shu/-/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0015文.jpg )
 
 ---
 
 0016南
-![0016南]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0016南.jpg )
+![0016南]( https://gitcode.net/xu180/shu/-/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0016南.jpg )
 
 ---
 
 0017阳
-![0017阳]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0017阳.jpg )
+![0017阳]( https://gitcode.net/xu180/shu/-/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0017阳.jpg )
 
 ---
 
 0018岑
-![0018岑]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0018岑.jpg )
+![0018岑]( https://gitcode.net/xu180/shu/-/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0018岑.jpg )
 
 ---
 
 0019勋
-![0019勋]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0019勋.jpg )
+![0019勋]( https://gitcode.net/xu180/shu/-/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0019勋.jpg )
 
 ---
 
 0020撰
-![0020撰]( https://cdn.jsdelivr.net/gh/scott180/shu/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0020撰.jpg )
+![0020撰]( https://gitcode.net/xu180/shu/-/raw/master/颜真卿《多宝塔碑》单字版/《多宝塔碑》第1-1000字/0020撰.jpg )
 
 ---
 
