--- a/docs/书法/练习/书法练习轨迹--明月几时有.md
+++ b/docs/书法/练习/书法练习轨迹--明月几时有.md
@@ -984,7 +984,6 @@
 
 
 ```
-
 人情必有所寄，然后能静，能定，能乐。
 寄于山水，得之旷达。
 寄于明月，得之幽深。
@@ -2513,6 +2512,80 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 衣带渐宽终不悔，为伊消得人憔悴。<br />
 众里寻他千百度，蓦然回首，那人却在，灯火阑珊处。<br />
 
+---
+
+- 修仙
+
+- 练气 筑基 金丹 
+- 元婴 出窍 化神
+- 炼虚 合体 大乘
+
+---
+
+- 修真
+
+- 炼精化气
+- 炼气化神
+- 炼神还虚
+- 炼虚合道
+
+---
+
+- 学历
+
+- 小学 初中 高中
+- 大专 本科 硕士 博士
+
+---
+
+- [x] 84、20220523
+
+![img343]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022051801.jpg )
+![img344]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022052001.jpg )
+
+```
+长太息以掩涕兮，哀民生之多艰。
+余虽好修姱以鞿羁兮，謇朝谇而夕替。
+既替余以蕙纕兮，又申之以揽茝。
+亦余心之所善兮，虽九死其犹未悔。
+众女嫉余之蛾眉兮，谣诼谓余以善淫。
+固时俗之工巧兮，偭规矩而改错。
+背绳墨以追曲兮，竞周容以为度。
+忳郁邑余侘傺兮，吾独穷困乎此时也。
+屈心而抑志兮，忍尤而攘诟。
+伏清白以死直兮，固前圣之所厚。
+悔相道之不察兮，延伫乎吾将反。
+回朕车以复路兮，及行迷之未远。
+不吾知其亦已兮，苟余情其信芳。
+高余冠之岌岌兮，长余佩之陆离。
+芳与泽其杂糅兮，唯昭质其犹未亏。
+民生各有所乐兮，余独好修以为常。
+虽体解吾犹未变兮，岂余心之可惩。 
+——屈原 《离骚》
+
+```
+
+---
+
+- [x] 85、20220530
+
+![img345]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022052501.jpg )
+![img346]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022052701.jpg )
+
+```
+健康三要素：良好的心态 充足的睡眠 适当的运动
+
+```
+
+练字谈 <br/>
+练习一年半， <br/>
+字还不好看。 <br/>
+不做高远志， <br/>
+只为逸情闲。 <br/>
+
+
+练字谈，练字叹，练字只为找清闲。 <br/>
+时光慢，时光漫，时光一去不复还。 <br/>
 
 ---
 
