--- a/docs/书法/轨迹/诗词杂句.md
+++ b/docs/书法/轨迹/诗词杂句.md
@@ -78,6 +78,20 @@
 
 ---
 
+练字谈 <br/>
+练习一年半， <br/>
+字还不好看。 <br/>
+不做高远志， <br/>
+只为逸情闲。 <br/>
+
+
+练字谈，练字叹，练字只为找清闲。 <br/>
+时光慢，时光漫，时光一去不复还。 <br/>
+
+`--20220602`
+
+---
+
 ## 2、杂句
 
 我的三观：制恒强变真
