--- a/docs/书法/轨迹/书法练习轨迹--明月几时有-无图版.md
+++ b/docs/书法/轨迹/书法练习轨迹--明月几时有-无图版.md
@@ -2591,7 +2591,6 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 #### 2.3.6、202206
 
-
 - [x] 86、20220606
 
 - [img347]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202206/2022060101.jpg )
@@ -2615,6 +2614,26 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 人的感觉有时是一种错觉，当你觉得很有见解很有想法的时候，有可能是一叶障目。 <br/>
 生命是美好的，需要珍惜。世界是复杂的，难以辨别。做好自己，做好当下。 <br/>
 `--20220609`
+
+---
+
+- [x] 87、20220613
+
+- [img349]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202206/2022060801.jpg )
+- [img350]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202206/2022061001.jpg )
+
+```
+酬乐天扬州初逢席上见赠
+唐 刘禹锡
+巴山楚水凄凉地，二十三年弃置身。
+怀旧空吟闻笛赋，到乡翻似烂柯人。
+沉舟侧畔千帆过，病树前头万木春。
+今日听君歌一曲，暂凭杯酒长精神。
+```
+
+世界在变，人性不变。天下熙攘，名利来往。<br/>
+真正要做的事，连神明也不要说。<br/>
+明心见性，谨守本心。<br/>
 
 
 <div STYLE="page-break-after: always;"></div>
@@ -2672,7 +2691,6 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 书就精卫填海浪。 <br />
 
 `--20220112`
-
 
 ---
 
