--- a/docs/目录.md
+++ b/docs/目录.md
@@ -46,6 +46,7 @@
   - [nginx笔记](编程/运维/nginx笔记.md)
   - [shell语法](编程/运维/shell语法.md)
   - [定时执行脚本](编程/运维/定时执行脚本.md)
+  - [批量推送布署徐书法项目](编程/运维/批量推送布署徐书法项目.md)
   - [gitbook部署博客](编程/运维/gitbook部署博客.md)
   - [vuepress构建项目](编程/运维/vuepress构建项目.md)
   - [gitlab、github绑定自定义域名](编程/运维/gitlab、github绑定自定义域名.md)
