--- a/docs/书法/轨迹/书法练习轨迹--明月几时有-无图版.md
+++ b/docs/书法/轨迹/书法练习轨迹--明月几时有-无图版.md
@@ -2635,6 +2635,16 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 真正要做的事，连神明也不要说。<br/>
 明心见性，谨守本心。<br/>
 
+---
+
+- [x] 88、20220620
+
+- [img351]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202206/2022061501.jpg )
+- [img352]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202206/2022061701.jpg )
+
+读万卷书，不如行万里路。<br/>
+丰碑无语，行胜于言。<br/>
+
 
 <div STYLE="page-break-after: always;"></div>
 
@@ -2661,16 +2671,13 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 龙骨山上风车横，转去庐州蜀山风。<br/>
 十年一觉世不同，西湖水清临安梦。<br/>
 
-```
-诗文解释：
-首句：家乡安徽无为四面环山，其中有一座龙骨山，山上安装了许多用作风力发电的大风车，壮观伟岸，引人注目。
-颔句：合肥古称庐州，本人就读的大学位于合肥的大蜀山脚下，有开福寺，有动物园，人文风景，融为一体。
-颈句：在合肥一共待了将近十年，大学四年，工作五年，而后觉得世事变迁，要出去看看。
-尾句：来到美丽的西湖之滨-杭州工作，预计在临安置业安家。实现中国梦，我的梦。
+诗文解释： <br />
+首句：家乡安徽无为四面环山，其中有一座龙骨山，山上安装了许多用作风力发电的大风车，壮观伟岸，引人注目。 <br />
+颔句：合肥古称庐州，本人就读的大学位于合肥的大蜀山脚下，有开福寺，有动物园，人文风景，融为一体。 <br />
+颈句：在合肥一共待了将近十年，大学四年，工作五年，而后觉得世事变迁，要出去看看。 <br />
+尾句：来到美丽的西湖之滨-杭州工作，预计在临安置业安家。实现中国梦，我的梦。 <br />
 
---202105
-
-```
+`--202105`
 
 ---
 
@@ -2707,7 +2714,8 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 一字：徐、吾、风、明 <br/>
 字母：xyqmmry、txyda、scott、scott180、xyqin、xy180、xu180、xuyq123、sc1、jack、Jack2Java、wuhu、longguang123、scott123、yxm、txyd、mmry、xyq、xu、gaizhi180、xy18484、test、xu123、whatyn、wuhuFly、xuyq、wuhuxy、xyqcalligraphy <br/>
 - 注册多少app就有多少账号，每个账号都会有昵称或者用户名，因为昵称可以修改，故而昵称的数量会远远大于账号数量（像QQ、微信用了几年甚至十几年，昵称不知道变了多少次）。简单说明一下，手机上安装了多少app，大家的昵称数量就会大于这些app的数量。所有人皆是如此，所以现代人的昵称都很多很多。 <br/>
-笔名就像姓名一样，同名现象相当普遍，因此很难准确找到目标对象。相比而言，邮箱 1021151991@qq.com 具有唯一性，是有效的也是本人常用的。 `--20210605`
+笔名就像姓名一样，同名现象相当普遍，因此很难准确找到目标对象。相比而言，邮箱 1021151991@qq.com 具有唯一性，是有效的也是本人常用的。<br/> 
+`--20210605`
 
 <h4 id="w20210628"></h4>
 
@@ -2736,7 +2744,8 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 天下大事，必作于细。天下难事，必作于易。 <br/>
 种一棵树最好的时间是十年前，其次是现在。 <br/>
 古今成大事者，不唯有超世之才，亦必有坚韧不拔之志。 <br/>
-宠辱不惊，看庭前花开花落;去留无意，望天上云卷云舒。 `--202106` <br/> 
+宠辱不惊，看庭前花开花落;去留无意，望天上云卷云舒。<br/> 
+`--202106` 
 
 <h4></h4>
 
