--- a/docs/编程/运维/批量推送布署徐书法项目.md
+++ b/docs/编程/运维/批量推送布署徐书法项目.md
@@ -285,6 +285,7 @@ git push
 
 #cd /e/Project/github/reco-blog          
 #cd /e/Project/github/reco-calligraphy
-#vuepress-reco  每个文件需要配置分类、标签、创建时间
+# vuepress-theme-reco 每个文件需要配置分类、标签、创建时间
+# https://github.com/scott180/reco-blog
 
 ```
