--- a/docs/书法/练习/无为徐生.md
+++ b/docs/书法/练习/无为徐生.md
@@ -134,18 +134,13 @@
 
 #### 2.2.3.徐书
 
+徐书-藏头诗,庚子年腊月初十寒夜抒怀所作。 <br />
+徐徐微风拂山岗， <br />
+永世难忘撞南墙。 <br />
+钦敬夸父逐日光， <br />
+书就精卫填海浪。 <br />
 
-```
-徐书-藏头诗,庚子年腊月初十寒夜抒怀所作。
-
-徐徐微风拂山岗，
-永世难忘撞南墙。
-钦敬夸父逐日光，
-书就精卫填海浪。
-
---20220112
-
-```
+`--20220112`
 
 ---
 
