--- a/docs/书法/练习/笔名汉字频率分析.md
+++ b/docs/书法/练习/笔名汉字频率分析.md
@@ -37,8 +37,6 @@
 
 汉字频率：{"明":17,"夜":9,"天":6,"如":3,"徐":3,"星":3,"之":3,"恒":3,"无":3,"名":2,"生":2,"风":2,"青":2,"来":2,"长":2,"耀":1,"一":1,"清":1,"有":1,"下":1,"小":1,"源":1,"云":1,"尔":1,"五":1,"林":1,"龙":1,"甲":1,"水":1,"岸":1,"方":1,"为":1,"去":1,"吾":1,"线":1,"先":1,"光":1,"秋":1,"子":1,"道":1,"湖":1,"字":1,"博":1,"盛":1,"襟":1,"古":1,"知":1,"共":1,"深":1,"右":1,"其":1,"松":1}
 
-
-
 ```
 
 ---
@@ -65,7 +63,6 @@
 
 汉字频率：{"明":33,"夜":15,"天":9,"之":6,"徐":5,"星":5,"一":4,"如":4,"风":4,"青":4,"恒":3,"无":3,"长":3,"清":2,"名":2,"小":2,"云":2,"生":2,"水":2,"秋":2,"子":2,"来":2,"米":2,"耀":1,"老":1,"玄":1,"了":1,"有":1,"下":1,"源":1,"尔":1,"五":1,"世":1,"林":1,"斗":1,"尘":1,"龙":1,"定":1,"业":1,"昨":1,"中":1,"辰":1,"甲":1,"岸":1,"方":1,"改":1,"为":1,"去":1,"格":1,"落":1,"达":1,"吾":1,"线":1,"埃":1,"先":1,"迈":1,"光":1,"克":1,"界":1,"行":1,"柏":1,"橐":1,"道":1,"湖":1,"字":1,"博":1,"盛":1,"飞":1,"烟":1,"襟":1,"也":1,"古":1,"健":1,"知":1,"雨":1,"择":1,"火":1,"问":1,"共":1,"深":1,"曲":1,"右":1,"其":1,"松":1,"衿":1}
 
-
 ```
 
 ---
@@ -91,7 +88,6 @@
 笔名总数：100个。其中：六字1个,五字6个,四字19个,三字15个,二字38个,一字4个,字母17个。二字38个最多,六字1个最少。汉字‘明’出现次数最多，频率最高，共34次。
 
 汉字频率：{"明":34,"夜":16,"之":10,"天":9,"徐":8,"星":7,"风":7,"一":6,"水":4,"青":4,"长":4,"如":4,"清":3,"东":3,"生":3,"恒":3,"来":3,"飞":3,"无":3,"雨":3,"有":2,"下":2,"名":2,"小":2,"克":2,"子":2,"米":2,"和":2,"源":2,"云":2,"秋":2,"门":2,"耀":1,"老":1,"吐":1,"尔":1,"世":1,"尘":1,"业":1,"尚":1,"昨":1,"中":1,"甲":1,"改":1,"为":1,"格":1,"落":1,"吾":1,"先":1,"光":1,"界":1,"行":1,"橐":1,"道":1,"湖":1,"字":1,"博":1,"襟":1,"也":1,"健":1,"火":1,"共":1,"山":1,"味":1,"其":1,"海":1,"白":1,"松":1,"衿":1,"西":1,"广":1,"玄":1,"了":1,"五":1,"林":1,"斗":1,"龙":1,"定":1,"斜":1,"原":1,"麦":1,"辰":1,"庶":1,"岸":1,"方":1,"去":1,"达":1,"线":1,"埃":1,"毅":1,"细":1,"迈":1,"柏":1,"盛":1,"四":1,"烟":1,"古":1,"以":1,"知":1,"择":1,"旭":1,"问":1,"深":1,"曲":1,"右":1,"时":1,"司":1,"書":1}
-
 
 ```
 
@@ -146,8 +142,6 @@
 笔名总数：121个。其中：六字1个,五字6个,四字22个,三字15个,二字50个,一字4个,字母23个。二字50个最多,六字1个最少。汉字‘明’出现次数最多，频率最高，共34次。
 
 汉字频率：{"明":34,"夜":16,"之":12,"星":9,"天":9,"徐":8,"风":7,"一":6,"水":4,"青":4,"长":4,"如":4,"清":3,"东":3,"生":3,"恒":3,"来":3,"飞":3,"无":3,"雨":3,"有":2,"三":2,"下":2,"名":2,"小":2,"张":2,"克":2,"行":2,"李":2,"子":2,"米":2,"赵":2,"和":2,"源":2,"云":2,"五":2,"秋":2,"四":2,"门":2,"耀":1,"老":1,"焉":1,"吐":1,"少":1,"尔":1,"世":1,"尘":1,"业":1,"尚":1,"素":1,"昨":1,"木":1,"中":1,"甲":1,"改":1,"为":1,"格":1,"落":1,"吾":1,"嘿":1,"呀":1,"千":1,"先":1,"光":1,"测":1,"界":1,"橐":1,"道":1,"湖":1,"字":1,"博":1,"呜":1,"襟":1,"也":1,"健":1,"火":1,"六":1,"共":1,"山":1,"味":1,"其":1,"海":1,"呼":1,"白":1,"松":1,"衿":1,"顿":1,"西":1,"广":1,"玄":1,"覆":1,"了":1,"安":1,"王":1,"林":1,"斗":1,"龙":1,"定":1,"斜":1,"原":1,"麦":1,"辰":1,"庶":1,"岸":1,"方":1,"去":1,"达":1,"线":1,"埃":1,"毅":1,"细":1,"迈":1,"及":1,"柏":1,"试":1,"盛":1,"州":1,"烟":1,"古":1,"以":1,"若":1,"知":1,"择":1,"旭":1,"问":1,"深":1,"曲":1,"右":1,"时":1,"叶":1,"司":1,"書":1,"雾":1}
-
-
 
 ```
 
@@ -237,7 +231,7 @@ import java.util.*;
  * 文件位置：https://gitlab.com/xuyq123/calligraphy-boot
  * 数据来源：https://gitlab.com/xuyq123/calligraphy/-/tree/master  书法练习轨迹--明月几时有
  *
- * @author xu
+ * @author xyq
  * @date 2021-07-08 14:32
  */
 public class CalligraphyNicknameAnalysisUtil {
