--- a/docs/目录.md
+++ b/docs/目录.md
@@ -15,6 +15,7 @@
 > 文档
 
   - [如何练好书法](生活/文档/如何练好书法.md)
+  - [文言文翻译网络流行语](生活/文档/文言文翻译网络流行语.md)
   - [安徽电信免费流量获取方法](生活/文档/安徽电信免费流量获取方法.md)
   - [安徽电信-流量来啦-每日必点](生活/文档/安徽电信-流量来啦-每日必点.md)
   - [治疗失眠无限循环的有趣动图](生活/文档/治疗失眠无限循环的有趣动图.md)
