--- a/docs/书法/练习/书法练习轨迹--明月几时有.md
+++ b/docs/书法/练习/书法练习轨迹--明月几时有.md
@@ -2666,6 +2666,32 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 人要多读书，读好书，书籍是人类进步的阶梯。<br>
 `--20220704`
 
+---
+
+#### 2.3.7、202207
+
+- [x] 91、20220711
+
+![img357]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202207/2022070501.jpg )
+![img358]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202207/2022070901.jpg )
+
+山坡羊·潼关怀古<br>
+元 张养浩<br>
+峰峦如聚，波涛如怒，<br>
+山河表里潼关路。<br>
+望西都，意踌躇。<br>
+伤心秦汉经行处，<br>
+宫阙万间都做了土。<br>
+兴，百姓苦；<br>
+亡，百姓苦。<br>
+
+<br />
+
+I think, therefore I am.<br>
+我思故我在。<br>
+
+---
+
 <div STYLE="page-break-after: always;"></div>
 
 ## 三、作者
