--- a/docs/目录.md
+++ b/docs/目录.md
@@ -38,6 +38,7 @@
   - [springmvc笔记](编程/java/springmvc笔记.md)
   - [servlet-jsp学习](编程/java/servlet-jsp学习.md)
   - [SpringCloud入门](编程/java/SpringCloud入门.md)
+  - [springboot启动banner图案](编程/java/springboot启动banner图案.md)
   
 > 运维
 
