--- a/docs/书法/轨迹/书法练习轨迹--明月几时有-无图版.md
+++ b/docs/书法/轨迹/书法练习轨迹--明月几时有-无图版.md
@@ -2692,6 +2692,33 @@ I think, therefore I am.<br>
 
 ---
 
+- [x] 92、20220718
+
+- [img359]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202207/2022071101.jpg )
+- [img360]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202207/2022071301.jpg )
+
+西湖天气，四十高温。<br>
+烈日热风，汗滴马路。<br>
+银行楼市，民生多艰。<br>
+保重身体，自强不息。<br>
+`--20220716`
+
+---
+
+- [x] 93、20220725
+
+- [img361]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202207/2022072001.jpg )
+- [img362]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202207/2022072201.jpg )
+
+万物逆旅，光阴过客。<br>
+浮生若梦，为欢几何。<br>
+白驹过隙，人生苦短。<br>
+逝者如斯，无愧于心。<br>
+
+做自己喜欢的事。<br>
+用自己的方式过完一生。<br>
+
+
 <div STYLE="page-break-after: always;"></div>
 
 ## 三、作者
