--- a/docs/书法/练习/书法练习轨迹--明月几时有.md
+++ b/docs/书法/练习/书法练习轨迹--明月几时有.md
@@ -2710,13 +2710,13 @@ I think, therefore I am.<br>
 ![img361]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202207/2022072001.jpg )
 ![img362]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202207/2022072201.jpg )
 
-万物逆旅，光阴过客。</div>
-浮生若梦，为欢几何。</div>
-白驹过隙，人生苦短。</div>
-逝者如斯，无愧于心。</div>
+万物逆旅，光阴过客。<br>
+浮生若梦，为欢几何。<br>
+白驹过隙，人生苦短。<br>
+逝者如斯，无愧于心。<br>
 
-做自己喜欢的事。</div>
-用自己的方式过完一生。</div>
+做自己喜欢的事。<br>
+用自己的方式过完一生。<br>
 
 
 <div STYLE="page-break-after: always;"></div>
