--- a/docs/目录.md
+++ b/docs/目录.md
@@ -85,6 +85,7 @@
 > 书法
 
   - [书法名帖](书法/书法/书法名帖.md) 
+  - [赤壁赋](书法/书法/赤壁赋.md)
   - [灵飞经](书法/书法/灵飞经.md)
   - [多宝塔碑](书法/书法/多宝塔碑.md)
   - [《心经》书法](书法/书法/《心经》书法.md)
